docs : 좋은 객체 지향 프로그래밍이란? part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/객체 지향 설계와 스프링.md
+++ b/Spring/Spring 핵심 원리 - 기본편/객체 지향 설계와 스프링.md
@@ -5,6 +5,7 @@
 ## 목차
 
 - [스프링이란?](#스프링이란?)
+- [좋은 객체 지향 프로그래밍이란?](#좋은-객체-지향-프로그래밍이란?)
 
 ## 스프링이란?
 
@@ -62,4 +63,122 @@
 
 </br>
 
+## 좋은 객체 지향 프로그래밍이란?
 
+### 객체 지향 특징
+1. 추상화
+2. 캡슐화
+3. 상속
+4. 다형성
+
+</br>
+
+### 객체 지향 프로그래밍
+- 컴퓨터 프로그램을 명령어의 목록으로 보는 시각에서 벗어나 여러 개의 독립된 단위, 즉 **"객체"**들의 모임으로 파악하고자 하는 것이며, 각각의 **객체**는 **메시지**를 주고받고, 데이터를 처리할 수 있다.**(협력)**
+- 프로그램을 **유연하고 변경이 용이**하게 만들기 때문에 대규모 소프트웨어 개발에 많이 사용된다.
+  - `유연하고 변경이 용이 ?` : 레고 블럭 조립하듯이, 키보드와 마우스를 갈아 끼우듯이, 컴퓨터 부품을 갈아 끼우듯이 컴포넌트를 쉽고 유연하게 변경하면서 개발할 수 있는 방법을 말하며, **객체 지향의 특징 중 하나인 `다형성`을 의미한다.**
+
+</br>
+
+### 다형성
+
+#### 다형성의 실세계 비유
+> 실세계와 객체 지향을 1:1로 매칭은 안 되지만, 실세계의 비유로 이해하기엔 좋음
+
+- `역할`과 `구현`으로 세상을 구분
+- **Ex) 운전자 - 자동차**
+<p align=center>
+<img width="1154" alt="스크린샷 2024-01-17 13 36 36" src="https://github.com/hamsangjin/TIL/assets/103736614/95ec470b-2ec0-45df-9ce5-05341e6abf16">
+</p>
+
+- `자동차`라는 역할을 `k3`, `아반떼`, `테슬라 모델3`로 구현을 했다.
+- 이때, 운전자가 `k3`를 타다가 `아반떼`로 변경해도 운전자에게 영향이 없다.
+- 왜냐하면, `자동차 역할의 인터페이스를 따라서 자동차들을 구현`했으며, `운전자`는 자동차 구현에 의존하는 것이 아닌 `자동차 역할의 인터페이스에 의존`을 하고있기 때문이다.
+- 이 말은 **클라이언트에게 영향을 주지 않고 새로운 기능을 제공**할 수 있다는 뜻이 된다.
+
+</br>
+
+- **Ex) 공연무대(로미오와 줄리엣 공연)**
+<p align=center>
+<img width="1046" alt="스크린샷 2024-01-17 13 44 18" src="https://github.com/hamsangjin/TIL/assets/103736614/2c1c8ac7-22ae-456e-bc02-1549e588c4c2">
+</p>
+
+- 내가 공연을 기획하고 운영하는 사람이라고 생각해보자.
+- 공연에는 로미오와 줄리엣이라는 역할이 있으며, 로미오 역할엔 장동건이나 원빈 등이 할 수 있고, 줄리엣 역할은 김태희이나 송혜교 등이 할 수 있다.
+- 이때, 로미오 역할을 하는 사람은 본인 역할에만 충실히 하면 되기 때문에, 줄리엣 역할이 누구여도 상관이 없다.
+- 즉, 역할들을 다른 사람으로 대체가 가능하다는 것이다.
+
+</br>
+
+#### 역할과 구현을 분리
+이렇게 `역할`과 `구현`으로 구분하면 세상이 **단순해지고 유연해지며 변경도 편리**해지며, 아래의 장점들도 있다.
+
+- 클라이언트는 **대상의 역할(인터페이스)** 알면 된다.
+- 클라이언트는 **구현 대상의 내부 구조**를 몰라도 된다.
+- 클라이언트는 구현 대상의 **내부 구조가 변경**되어도 영향을 받지 않는다.
+- 클라이언트는 **구현 대상 자체를 변경**해도 영향을 받지 않는다.
+
+#### 자바 언어
+- 자바 언어의 `다형성`을 활용
+- 역할 : 인터페이스
+- 구현 : 인터페이스를 구현한 클래스, 구현 객체
+- 객체를 설계할 때 **역할과 구현을 명확히 분리**
+- 객체 설계 시 **역할(인터페이스)을 먼저 부여**하고, 그 역할을 수행하는 **구현 객체 만들기**
+
+#### 객체의 협력이라는 관계부터 생각
+- 혼자 있는 객체는 없으며, 클라이언트는 요청하고, 서버는 응답한다.
+- 수많은 객체 클라이언트와 객체 서버는 서로 협력 관계를 가진다.
+
+**클라이언트가 서버를 요청하는 그림**
+<p align=center>
+<img width="765" alt="스크린샷 2024-01-17 14 18 37" src="https://github.com/hamsangjin/TIL/assets/103736614/3fff45c3-a1c2-4759-ab6b-fcb047c1dba4">
+</p>
+
+> 서버가 클라이언트가 되어서 또 요청을 보낼 수도 있다.
+
+#### 자바 언어의 다형성
+<p align=center>
+<img width="823" alt="스크린샷 2024-01-17 15 16 52" src="https://github.com/hamsangjin/TIL/assets/103736614/6cd4bea2-60da-40f4-8e2c-c4b736615995">
+</p>
+
+- 오버라이딩은 자바 기본 문법으로써, `MemoryMemberRepository`에서 `save()` 메소드를 호출하면 오버라이딩된 메소드가 실행된다.
+- 다형성으로 인터페이스를 구현한 객체를 실행 시점에 유연하게 변경할 수 있고, 클래스 상속 관계도 다형성, 오버라이딩을 적용할 수 있다.
+
+<p align=center>
+<img width="600" height="300" alt="스크린샷 2024-01-17 15 18 01" src="https://github.com/hamsangjin/TIL/assets/103736614/d52f646d-5163-47ef-a49e-4746efc96d8a">
+<img width="300" height="300" alt="스크린샷 2024-01-17 15 41 00" src="https://github.com/hamsangjin/TIL/assets/103736614/9b4c140a-b257-4099-9587-6d353ffd2a47">
+</p>
+
+- 클라이언트는 `MemberRepository`를 의존하기 때문에, 다형성을 활용해 `MemberRepository`에 `MemoryMemberRepository`나 `JdbcMemberRepository`를 대입할 수 있다.
+- 만약 `MemberRepository`에 `MemoryMemberRepository`를 대입했다면, 빨간색 서버를 가리키게 되고, `JdbcMemberRepository`를 대입했다면, 초록색 서버를 가리키게 된다.
+
+</br>
+
+#### 다형성의 본질
+- 인터페이스를 구현한 객체 인스턴스를 실행 시점에 **유연하게 변경**할 수 있다.
+- 다형성의 본질을 이해하려면 협력이라는 객체 사이의 관계에서 시작해야한다.
+
+> **즉, 클라이언트를 변경하지 않고, 서버의 구현 기능을 유연하게 변경할 수 있다.**
+
+</br>
+
+#### 정리
+- 실세계의 역할과 구현이라는 편리한 컨셉을 `다형성`을 통해 객체 세상으로 가져올 수 있게 되면서, **유연하고 변경이 용이하며, 확장 가능한 설계**가 가능해졌다.
+- 또, 클라이언트에 **영향을 주지 않으면서 변경**할 수 있다.
+
+> 따라서, 역할(인터페이스) 자체가 변하면 클라이언트, 서버 모두에 큰 변경이 발생하므로, **인터페이스를 안정적으로 잘 설계**하는 것이 중요하다.
+
+</br>
+
+#### 스프링과 객체 지향
+- `다형성`이 가장 중요하며, 스프링은 `다형성`을 극대화해서 이용할 수 있게 도와준다.
+- 스프링에서 말하는 `제어의 역전(IoC)`, `의존관계 주입(DI)`은 다형성을 활용해서 역할과 구현을 편리하게 다룰 수 있도록 지원한다.
+  - `제어의 역전(IoC)`, `의존관계 주입(DI)`은 뒤에서 자세히 알아보자
+ 
+</br>
+
+---
+
+</br>
+
+## 좋은 객체 지향 설계의 5가지 원칙
