--- a/Spring/Spring 핵심 원리 - 기본편/객체 지향 설계와 스프링.md
+++ b/Spring/Spring 핵심 원리 - 기본편/객체 지향 설계와 스프링.md
@@ -6,6 +6,8 @@
 
 - [스프링이란?](#스프링이란?)
 - [좋은 객체 지향 프로그래밍이란?](#좋은-객체-지향-프로그래밍이란?)
+- [좋은 객체 지향 설계의 5가지 원칙(SOLID)](#좋은-객체-지향-설계의-5가지-원칙(SOLID))
+- [객체 지향 설계와 스프링](#객체-지향-설계와-스프링)
 
 ## 스프링이란?
 
@@ -181,4 +183,81 @@
 
 </br>
 
-## 좋은 객체 지향 설계의 5가지 원칙
+## 좋은 객체 지향 설계의 5가지 원칙(SOLID)
+
+> `SOLID` : 클린코드로 유명한 로버트 마틴이 좋은 객체 지향 설계의 5가지 원칙을 정리
+
+### `SRP(Single Responsibility Principle)` : 단일 책임 원칙
+> 한 클래스는 **하나의 책임**만 가져야한다.
+- **하나의 책임**이라는 건 클 수도 있고, 작을 수도 있으며, 문맥과 상황에 따라 다르기때문에 모호하다.
+- 중요한 기준은 `변경`이므로, 변경이 있을 때 **파급 효과가 적으면 단일 책임 원칙을 잘 따른 것**이다.
+- Ex) UI 변경, 객체의 생성과 사용을 분리
+
+</br>
+
+### `OCP(Open/Closed Principle)` : 개방-폐쇄 원칙
+> 소프트웨어 요소는 **확장에는 열려**있으면서, **변경에는 닫혀**있어야 한다.
+- 말이 안 되는 거 같지만, 이 말은 즉 `다형성`을 활용하라는 말이다.
+- 인터페이스를 구현한 새로운 클래스를 하나 만들어서 새로운 기능을 구현하는 것이다.(역할과 구현의 분리)
+
+```java
+// MemoryMemberRepository를 이용한 구현
+public class MemberService {
+    private MemberRepository memberRepository = new MemoryMemberRepository();
+}
+```
+
+```java
+// MemoryMemberRepository를 이용한 구현에서 JdbcMemberRepository를 이용한 구현으로 변경
+public class MemberService {
+// private MemberRepository memberRepository = new MemoryMemberRepository();
+private MemberRepository memberRepository = new JdbcMemberRepository();
+}
+```
+
+#### 개방-폐쇄 원칙의 문제점
+- 위에서 봤듯이 `MemberService` 클라이언트가 구현 클래스를 직접 선택한다.
+- 구현 객체를 변경하려면 클라이언트 코드를 변경해야 한다.
+- 분명 다형성을 사용했지만 OCP 원칙을 지킬 수 없다.(변경에 닫혀있지 않다.)
+- 따라서, 객체를 생성하고, 연관관계를 맺어주는 별도의 조립, 설정자가 필요하다.
+
+</br>
+
+### `LSP(Liskov Substitution Principle)` : 리스코프 치환 원칙
+> 프로그램 객체는 프로그램의 정확성을 깨트리지 않으면서 하위 타입의 인스턴스로 바꿀 수 있어야 한다.
+- 다형성에서 하위 클래스는 인터페이스 규약을 다 지켜야 한다는 것으로, 다형성을 지원하기 위한 원칙, 인터페이스를 구현한 구현체는 믿고 사용하려면 이 원칙이 필요하다.
+- 단순히 컴파일에 성공하는 것을 넘어서는 이야기며, 기능적인 규약을 지켜야 한다.
+- Ex) 자동차 인터페이스의 엑셀은 앞으로 가라는 기능, 뒤로 가게 구현하면 LSP 위반이고 느리더라도 앞으로 가야한다.
+
+</br>
+
+### `ISP(Interface Segregation Principle)` : 인터페이스 분리 원칙
+> 특정 클라이언트를 위한 **인터페이스 여러 개가 범용 인터페이스 하나보다 낫다.**
+- `자동차 인터페이스` -> 운전 인터페이스, 정비 인터페이스로 분리
+- `사용자 인터페이스` -> 운전자 클라이언트, 정비사 클라이언트로 분리
+- 분리하면 정비 인터페이스 자체가 변해도 운전자 클라이언트에 영향을 주지 않으므로, **인터페이스가 명확**해지고, **대체 가능성이 높아**진다.
+
+</br>
+
+### `DIP(Dependency Inversion Principle)` : 의존관계 역전 원칙
+> 프로그래머는 "추상화에 의존해야지, 구체화에 의존하면 안 된다.", 의존성 주입은 이 원칙을 따르는 방법 중 하나다.
+- **구현 클래스에 의존하지 말고, 인터페이스에 의존**하라는 뜻이며, 즉 앞서 학습한 `구현`이 아닌 `역할에 의존`하게 해야한다는 것과 같다.
+
+**하지만 OCP에서 설명한 `MemberService`는 인터페이스에 의존하지만, 동시에 구현 클래스까지 의존한다.**
+- `MemberService` 클라이언트가 구현 클래스를 직접 선택하므로 DIP 위반이다.
+
+</br>
+
+### 정리
+- 객체 지향의 핵심은 `다형성`이다.
+- 하지만, 다형성만으로는 쉽게 부품을 갈아 끼우듯이 개발할 수 없다.
+- 구현 객체를 변경할 때 클라이언트 코드도 함께 변경되기 때문에, OCP와 DIP를 지킬 수 없으므로 뭔가가 더 필요하다.
+
+> 더 필요한 게 뭔지 알아내는 것이 중요하다.
+</br>
+
+---
+
+</br>
+
+## 객체 지향 설계와 스프링
