--- a/Spring/Spring 핵심 원리 - 기본편/객체 지향 설계와 스프링.md
+++ b/Spring/Spring 핵심 원리 - 기본편/객체 지향 설계와 스프링.md
@@ -261,3 +261,32 @@ private MemberRepository memberRepository = new JdbcMemberRepository();
 </br>
 
 ## 객체 지향 설계와 스프링
+
+### 스프링 이야기에 왜 객체 지향 이야기가 나오는가 ?
+
+스프링은 다음 기술로 `다형성`과 `OCP, DIP`를 가능하게 지원한다.
+- `DI(Dependency Injection)` : 의존관계, 의존성 주입
+- `DI 컨테이너` 제공
+
+> 그렇게 클라이언트 코드의 변경없이 기능을 확장할 수 있게 되어, 쉽게 부품을 교체하듯이 개발이 가능해졌다.
+
+</br>
+
+### 스프링이 없던 시절로
+옛날 어떤 개발자가 **좋은 객체 지향 개발**을 하려고 `OCP, DIP` 원칙을 지키면서 개발을 하다보니 너무 할 일이 많아져 결국 프레임워크로 만들어버렸다.
+
+순수하게 자바로 `OCP, DIP` 원칙들을 지키면서 개발을 해보면, 결국 `스프링 프레임워크(DI 컨테이너)`를 만들게 된다.
+
+</br>
+
+### 정리
+모든 설계에 **역할**과 **구현**을 분리하자.
+
+예를 들어, 애플리케이션 설계도 공연을 설계하듯이 배역만 만들어놓고, 배우는 언제든지 **유연하게 변경**할 수 있도록 만드는 것이 **좋은 객체 지향 설계**다.
+
+> 이상적으로는 **모든 설계에 인터페이스를 부여**하는 것이 좋다.
+
+</br>
+
+실무에서는 인터페이스를 도입하면 **추상화**라는 비용이 발생하므로, 기능을 확장할 가능성이 없다면, **구체 클래스를 직접 사용**하고, 향후 꼭 필요할 때 **리팩터링해서 인터페이스를 도입**하는 것도 방법이다.
+
