docs : 회원 도메인 설계 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
+++ b/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
@@ -69,3 +69,42 @@
 </br>
 
 ## 회원 도메인 설계
+
+### 회원 도메인 요구사항
+- 회원을 가입하고 조회할 수 있다.
+- 회원은 일반과 VIP 두 가지 등급이 있다.
+- 회원 데이터는 자체 DB를 구축할 수 있고, 외부 시스템과 연동할 수 있다.(미확정)
+
+### 회원 도메인 협력 관계
+<p align=center>
+<img width="568" alt="스크린샷 2024-01-22 15 50 55" src="https://github.com/hamsangjin/TIL/assets/103736614/c1362e6b-07fa-4bb7-bbf0-8c5a337aea3b">
+</p>
+
+- 회원 데이터가 어떻게 관리될지 모르니, 회원 저장소라는 **인터페이스**를 만들어 그에 맞게 **구현체**를 만들어준다.
+
+### 회원 클래스 다이어그램
+<p align=center>
+<img width="562" alt="스크린샷 2024-01-22 15 51 07" src="https://github.com/hamsangjin/TIL/assets/103736614/189bf096-62cb-4894-b516-ca21da156d8d">
+</p>
+
+- `MemberService` : 회원 서비스의 인터페이스
+- `MemberSerivcelmpl` : 회원 서비스의 구현체
+- `MemberRepository` : 회원 저장소의 인터페이스
+- `MemoryMemberRepository` : 회원 저장소의 메모리를 이용한 구현체
+- `DbMemberRepository` : 회원 저장소의 DB를 이용한 구현체
+
+### 회원 객체 다이어그램
+<p align=center>
+<img width="560" alt="스크린샷 2024-01-22 15 51 29" src="https://github.com/hamsangjin/TIL/assets/103736614/8e9e10fd-351e-42f8-8025-7578fdb1e74d">
+</p>
+
+- 서버가 실행됐을 때 동적으로 할당된 인스턴스끼리의 참조라고 보면 된다.
+
+
+</br>
+
+---
+
+</br>
+
+## 회원 도메인 개발
