docs : 회원 도메인 개발 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
+++ b/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
@@ -108,3 +108,154 @@
 </br>
 
 ## 회원 도메인 개발
+
+### 회원 엔티티
+
+- 회원 등급(main/java/hello/core/member/Grade.java)
+```java
+package hello.core.member;
+
+public enum Grade {
+    BASIC,
+    VIP
+}
+```
+
+> `enum` 클래스 : 열거형 enum은 **상수**로 구성된 클래스로, 클래스처럼 **변수**와 **메소드**를 가질 수 있지만, **상속**이나 **인스턴스**를 생성할 수는 없으며, enum 값은 상수로 `public`, `static`, `final` 속성을 가지고 있어 변경될 수 없다.
+
+</br>
+
+- 회원 엔티티(main/java/hello/core/member/Member.java)
+```java
+package hello.core.member;
+
+public class Member {
+    private Long id;
+    private String name;
+    private Grade grade;
+
+    public Member(Long id, String name, Grade grade) {
+        this.id = id;
+        this.name = name;
+        this.grade = grade;
+    }
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public Grade getGrade() {
+        return grade;
+    }
+
+    public void setGrade(Grade grade) {
+        this.grade = grade;
+    }
+}
+
+```
+
+- `생성자`와 `Getter and Setter`를 작성해준다.
+
+</br>
+
+### 회원 저장소
+
+- 회원 저장소 인터페이스(main/java/hello/core/member/MemberRepository.java)
+```java
+package hello.core.member;
+
+public interface MemberRepository {
+    void save(Member member);
+
+    Member findById(Long memberId);
+
+}
+```
+
+
+- 메모리 회원 저장소 구현체(main/java/hello/core/member/MemoryMemberRepository.java)
+```java
+package hello.core.member;
+
+import java.util.HashMap;
+import java.util.Map;
+
+public class MemoryMemberRepository implements MemberRepository{
+
+    private static Map<Long, Member> store = new HashMap<>();
+
+    @Override
+    public void save(Member member) {
+        store.put(member.getId(), member);
+    }
+
+    @Override
+    public Member findById(Long memberId) {
+        return store.get(memberId);
+    }
+}
+
+```
+
+- 참고로 `HashMap` 은 동시성 이슈가 발생할 수 있으니, 이런 경우 `ConcurrentHashMap` 을 사용하도록 한다.
+
+</br>
+
+### 회원 서비스
+- 회원 서비스 인터페이스(main/java/hello/core/member/MemberSerivce.java)
+```java
+package hello.core.member;
+
+public interface MemberService {
+
+    void join(Member member);
+
+    Member findMember(Long memberId);
+}
+```
+
+- 회원 서비스 구현체(main/java/hello/core/member/MemverServiceImpl.java)
+```java
+package hello.core.member;
+
+public class MemberServiceImpl implements MemberService{
+
+    private final MemberRepository memberRepository = new MemoryMemberRepository();
+
+    @Override
+    public void join(Member member) {
+        memberRepository.save(member);
+    }
+
+    @Override
+    public Member findMember(Long memberId) {
+        return memberRepository.findById(memberId);
+    }
+}
+
+```
+
+- 회원가입을 하고 조회를 하려면 저장소인 `memberRepository` 인터페이스가 필요하다.
+- 하지만 인터페이스만 가리키고 있으면 `null point Exception`이 발생한다.
+- 따라서 구현체인 `MemoryMemberRepository`를 넣어준다.
+
+</br>
+
+---
+
+</br>
+
+## 회원 도메인 실행과 테스트
