docs : 회원 도메인 실행과 테스트 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
+++ b/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
@@ -259,3 +259,93 @@ public class MemberServiceImpl implements MemberService{
 </br>
 
 ## 회원 도메인 실행과 테스트
+
+### 회원 도메인 - 회원가입 main
+이제 작성한 회원 도메인을 실행하며 테스트해보자.
+
+**순수 java**코드로 테스트를 해보자
+
+- main/java/hello/core/MemberApp.java
+    
+```java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+
+public class MemberApp {
+
+    public static void main(String[] args) {
+        MemberService memberService = new MemberServiceImpl();
+
+        Member member = new Member(1L, "member1", Grade.VIP);
+        memberService.join(member);
+
+        Member findMember = memberService.findMember(1L);
+
+        System.out.println("new member = " + member.getName());
+        System.out.println("find Member = " + findMember.getName());
+    }
+}
+
+```
+
+- 결과를 확인해보면 member 객체에 생성한 정보와 일치하는 걸 볼 수 있다.
+
+<p align = center>
+<img width="213" alt="스크린샷 2024-01-23 13 34 03" src="https://github.com/hamsangjin/TIL/assets/103736614/62da1c9a-4f92-45db-a43a-eadd9f26ad28">
+</p>
+
+> 하지만 이렇게 **애플리케이션 로직**으로 테스트하는 것은 좋지 않으니, `JUnit` 테스트를 사용해보자.
+
+</br>
+
+### 회원 도메인 - 회원 가입 테스트
+
+- test/java/hello/core/member/MemberServiceTest.java
+```java
+package hello.core.member;
+
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+public class MemberServiceTest {
+
+    MemberService memberService = new MemberServiceImpl();
+
+    @Test
+    void join(){
+        // given
+        Member member = new Member(1L, "memberA", Grade.VIP);
+
+        // when
+        memberService.join(member);
+        Member findMember = memberService.findMember(1L);
+
+        // then
+        Assertions.assertThat(member).isEqualTo(findMember);
+    }
+}
+
+```
+
+- `JUnit`으로 테스트한 결과 에러없이 성공한 것을 볼 수 있다.
+<p align = center>
+<img width="1600" alt="스크린샷 2024-01-23 13 51 40" src="https://github.com/hamsangjin/TIL/assets/103736614/7c8c6cd4-08ca-4b12-b9e1-92d79e3d878b">
+</p>
+
+</br>
+
+> 하지만 현재 회원 도메인 설계에는 `의존관계가 인터페이스 뿐만 아니라 구현까지 의존`하는 문제점이 있다. </br>
+> 이 문제점과 해결방안에 대해서는 주문부분까지 만들고 공부해보자.
+
+</br>
+
+---
+
+</br>
+
+## 주문과 할인 도메인 설계
+
