docs : 주문과 할인 도메인 설계 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
+++ b/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
@@ -349,3 +349,71 @@ public class MemberServiceTest {
 
 ## 주문과 할인 도메인 설계
 
+### 주문과 할인 정책
+- 회원은 상품을 주문할 수 있다.
+- 회원 등급에 따라 할인 정책을 적용할 수 있다.
+- 할인 정책은 모든 VIP는 1000원을 할인해주는 고정 금액 할인을 적용해달라.
+- 할인 정책은 변경 가능성이 높다. 왜냐, 회사의 기본 할인 정책을 아직 못 정했고, 오픈 직전까지 고민을 미루고 싶으며, 최악의 경우 할인을 적용하지 않을 수도 있다.
+
+</br>
+
+### 주문 도메인 협력, 역할, 책임
+<p align = center>
+<img width="563" alt="스크린샷 2024-01-23 13 58 53" src="https://github.com/hamsangjin/TIL/assets/103736614/782e6561-6853-41d1-abe7-266183844cf1">
+</p>
+
+1. `주문 생성` : 클라이언트는 주문 서비스에 주문 생성을 요청한다.
+2. `회원 조회` : 할인을 위해서는 회원 등급이 필요해, 주문 서비스는 회원 저장소에서 회원을 조회한다.
+3. `할인 적용` : 주문 서비스는 회원 등급에 따른 할인 여부를 할인 정책에 위임한다.
+4. `주문 결과 반환` : 주문 서비스는 할인 결과를 포함한 주문 결과를 반환한다.
+
+> 실제로는 주문 데이터를 `DB`에 저장하겠지만, 예제가 너무 복잡해질 수 있으므로 생략하고, 단순히 주문 결과를 반환한다.
+
+</br>
+
+### 주문 도메인 전체
+
+<p align = center>
+<img width="570" alt="스크린샷 2024-01-23 14 02 20" src="https://github.com/hamsangjin/TIL/assets/103736614/487afcd2-6ad5-4675-93d8-ff353b5204ef">
+</p>
+
+- **역할과 구현을 분리**해서 자유롭게 구현 객체를 조립할 수 있게 설계했다.
+- 따라서 회원 저장소와 할인 정책을 **유연하게 변경**할 수 있다.
+
+</br>
+
+### 주문 도메인 클래스 다이어그램
+
+<p align = center>
+<img width="573" alt="스크린샷 2024-01-23 14 04 53" src="https://github.com/hamsangjin/TIL/assets/103736614/8613921b-dc7a-4d5c-90fd-e2211bb201b0">
+</p>
+
+</br>
+
+### 주문 도메인 객체 다이어그램
+
+- 첫 번째 객체 다이어그램
+<p align = center>
+<img width="564" alt="스크린샷 2024-01-23 14 06 38" src="https://github.com/hamsangjin/TIL/assets/103736614/b1ff4124-ef9b-4e0e-af64-c5c815dd5a3e">
+</p>
+
+- 회원을 메모리에서 조회하고, 정액 할인 정책(고정 금액)을 지원해도 주문 서비스를 변경하지 않아도 된다.
+
+</br>
+
+- 두 번째 객체 다이어그램
+<p align = center>
+<img width="559" alt="스크린샷 2024-01-23 14 06 49" src="https://github.com/hamsangjin/TIL/assets/103736614/0d1ea4b7-f27f-4d74-921c-84b3879a4dfd">
+</p>
+
+- 회원을 메모리가 아닌 실제 DB에서 조회하고, 정률 할인 정책(주문 금액에 따라 % 할인)을 지원해도 주문 서비스를 변경하지 않아도 된다.
+
+> 두 객체 다이어그램 모두 역할들의 협력 관계를 그대로 재사용할 수 있다.
+
+</br>
+
+---
+
+</br>
+
+## 주문과 할인 도메인 개발
