--- a/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
+++ b/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
@@ -417,3 +417,173 @@ public class MemberServiceTest {
 </br>
 
 ## 주문과 할인 도메인 개발
+
+### 할인 정책 인터페이스
+- main/java/hello/core/discount/DiscountPolicy.java
+```java
+package hello.core.discount;
+
+import hello.core.member.Member;
+
+public interface DiscountPolicy {
+    
+    // @retrun 할인 대상 금액
+    int discount(Member member, int price);
+}
+```
+
+</br>
+
+### 정액 할인 정책 구현체
+- main/java/hello/core/discount/FixDiscountPolicy.java
+```java
+package hello.core.discount;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+
+public class FixDiscountPolicy implements DiscountPolicy{
+
+    // 할인 금액
+    private int discountFixAmount = 1000;
+
+    @Override
+    public int discount(Member member, int price) {
+        if (member.getGrade() == Grade.VIP){
+            return discountFixAmount;
+        } else {
+            return 0;
+        }
+    }
+}
+```
+
+- 간단하게 VIP면 정해놓은 할인 금액인 `discountFixAmount`를 리턴하고, 아니라면 `0`을 리턴해준다.
+
+</br>
+
+### 주문 엔티티
+- main/java/hello/core/order/Order.java
+```java
+package hello.core.order;
+
+public class Order {
+    private Long memberId;
+    private String itemName;
+    private int itemPrice;
+    private int discountPrice;
+
+    public Order(Long memberId, String itemName, int itemPrice, int discountPrice) {
+        this.memberId = memberId;
+        this.itemName = itemName;
+        this.itemPrice = itemPrice;
+        this.discountPrice = discountPrice;
+    }
+
+    public int calculatePrice(){
+        return itemPrice - discountPrice;
+    }
+
+    public Long getMemberId() {
+        return memberId;
+    }
+
+    public void setMemberId(Long memberId) {
+        this.memberId = memberId;
+    }
+
+    public String getItemName() {
+        return itemName;
+    }
+
+    public void setItemName(String itemName) {
+        this.itemName = itemName;
+    }
+
+    public int getItemPrice() {
+        return itemPrice;
+    }
+
+    public void setItemPrice(int itemPrice) {
+        this.itemPrice = itemPrice;
+    }
+
+    public int getDiscountPrice() {
+        return discountPrice;
+    }
+
+    public void setDiscountPrice(int discountPrice) {
+        this.discountPrice = discountPrice;
+    }
+
+    @Override
+    public String toString() {
+        return "Order{" +
+                "memberId=" + memberId +
+                ", itemName='" + itemName + '\'' +
+                ", itemPrice=" + itemPrice +
+                ", discountPrice=" + discountPrice +
+                '}';
+    }
+}
+```
+
+- 회원 Id, 상품 이름, 상품 가격, 할인된 가격으로 구성되어 있다.
+
+> 여기서 Generate(cmd + n)에서 `toString()` 선택해 생성해주면 Order 객체를 출력했을 때 `toString()`의 내용이 출력된다.
+> `System.out.println("order = " + order);` : 이렇게 Order 객체를 출력했을 때 `toString()`의 내용이 출력된다는 뜻
+
+</br>
+
+### 주문 서비스 인터페이스
+- main/java/hello/core/order/OrderService.java
+```java
+package hello.core.order;
+
+public interface OrderService {
+    Order createOrder(Long memberId, String itemName, int itemPrice);
+}
+
+```
+
+</br>
+
+### 주문 서비스 구현체
+- main/java/hello/core/order/OrderServiceImpl.java
+```java
+package hello.core.order;
+
+import hello.core.discount.DiscountPolicy;
+import hello.core.discount.FixDiscountPolicy;
+import hello.core.member.Member;
+import hello.core.member.MemberRepository;
+import hello.core.member.MemoryMemberRepository;
+
+public class OrderServiceImpl implements OrderService{
+
+    private final MemberRepository memberRepository = new MemoryMemberRepository();
+    private final DiscountPolicy discountPolicy = new FixDiscountPolicy();
+
+    @Override
+    public Order createOrder(Long memberId, String itemName, int itemPrice) {
+        Member member = memberRepository.findById(memberId);
+        int discountPrice = discountPolicy.discount(member, itemPrice);
+
+        return new Order(memberId, itemName, itemPrice, discountPrice);
+    }
+}
+
+```
+
+- **주문 생성** 요청이 오면, **회원 정보**를 조회하고, **할인 정책**을 적용한 다음 **주문 객체**를 생성해서 반환한다.
+- `메모리 회원 리포지토리`와 `고정 금액 할인 정책`을 구현체로 생성한다.
+
+</br>
+
+---
+
+</br>
+
+## 주문과 할인 도메인 실행과 테스트
+
+</br>
