docs : 주문과 할인 도메인 실행과 테스트 part 끝, 2. 스프링 핵심 원리 이해1 - 예제 만들기 완료

--- a/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
+++ b/Spring/Spring 핵심 원리 - 기본편/2. 스프링 핵심 원리 이해 1 - 예제 만들기.md
@@ -586,4 +586,88 @@ public class OrderServiceImpl implements OrderService{
 
 ## 주문과 할인 도메인 실행과 테스트
 
+### 주문과 할인 정책 실행
+- main/java/hello/core/OrderApp.java
+```java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import hello.core.order.Order;
+import hello.core.order.OrderService;
+import hello.core.order.OrderServiceImpl;
+
+public class OrderApp {
+    public static void main(String[] args) {
+        MemberService memberService = new MemberServiceImpl();
+        OrderService orderService = new OrderServiceImpl();
+
+        Long memberId = 1L;
+        Member member = new Member(memberId, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        Order order = orderService.createOrder(memberId, "itemA", 10000);
+        System.out.println("Order = " + order);
+        System.out.println("order.calculatePrice = " + order.calculatePrice());
+    }
+}
+
+```
+
 </br>
+
+- 결과
+<p align = center>
+<img width="742" alt="스크린샷 2024-01-23 16 00 55" src="https://github.com/hamsangjin/TIL/assets/103736614/25e9afa2-b8b1-418c-92dd-56fa330fc0c3">
+</p>
+
+- 이렇게 할인 금액이 잘 출력하는 걸 확인할 수 있지만, 역시 `애플리케이션 로직`으로 테스트하지말고 `JUnit`을 이용해 테스트해보자.
+
+</br>
+
+### 주문과 할인 정책 테스트
+- test/java/hello/core/order/OrderServiceTest.java
+```java
+package hello.core.order;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+public class OrderServiceTest {
+    MemberService memberService = new MemberServiceImpl();
+    OrderService orderService = new OrderServiceImpl();
+
+    @Test
+    void createOrder(){
+
+        // member 생성
+        Long memberId = 1L;
+        Member member = new Member(memberId, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        // 주문 생성
+        Order order = orderService.createOrder(memberId, "itemA", 10000);
+
+        // 할인금액 확인
+        Assertions.assertThat(order.getDiscountPrice()).isEqualTo(1000);
+    }
+}
+
+```
+
+</br>
+
+- 결과
+<p align = center>
+<img width="342" alt="스크린샷 2024-01-23 16 05 31" src="https://github.com/hamsangjin/TIL/assets/103736614/0f45e86f-e872-4215-a7b2-b4dff8d83ab2">
+</p>
+
+</br>
+
+> 이렇게 `JUnit`을 활용한 테스트도 해봤고, 다음 파트에서 **정액 할인 정책에서 정률 할인 정책으로 변경**했을 때 실제로 **객체지향적**으로 잘 설계되었는지 확인해볼 것이다.
