docs : 새로운 할인 정책 적용과 문제점 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -128,3 +128,89 @@ public class RateDiscountPolicyTest {
 </br>
 
 ## 새로운 할인 정책 적용과 문제점
+
+### 할인정책 적용
+
+- 먼저 할인 정책을 변경하려면 클라이언트인 `OrderServiceImpl` 코드를 고쳐야한다.
+```java
+public class OrderServiceImpl implements OrderService {
+ //    private final DiscountPolicy discountPolicy = new FixDiscountPolicy();
+     private final DiscountPolicy discountPolicy = new RateDiscountPolicy();
+ }
+```
+
+</br>
+
+### 문제점 발견
+
+- 역할과 구현 분리했고, 다형성 활용 및 인터페이스와 구현 객체 분리까지 했다.
+- 그렇게 OCP, DIP같은 객체지향 설계 원칙을 충실히 준수한 거 같지만 아니다.
+
+</br>
+
+- `DIP` : 주문서비스 클라이언트인 `OrderServiceImpl`는 `DiscountPolicy` 인터페이스에 의존해 **DIP**를 지킨 거 같지만, 구현체인 `FixDiscountPolicy`와 `RateDiscountPolicy`에도 의존하고 있어 지키지 못했다. </br>
+- `OCP` : 현재 코드는 기능을 확장해서 변경하면, 클라이언트 코드에도 영향을 주기 때문에 **OCP**도 위반이다.
+
+> 왜 클라이언트 코드를 변경해야해서 OCP를 위반하는지 클래스 다이어그램으로 의존관계를 분석해보자.
+
+</br>
+
+### 의존 관계
+
+- **기대했던 의존관계**
+<p align=center>
+<img width="589" alt="스크린샷 2024-01-24 15 02 58" src="https://github.com/hamsangjin/TIL/assets/103736614/547deb8e-b199-4e31-be24-971da72ea90c">
+</p>
+
+- 이렇게 단순히 `DiscountPolicy` 인터페이스만 의존한다고 생각했다.
+
+</br>
+
+- **실제 의존관계**
+<p align=center>
+<img width="589" alt="스크린샷 2024-01-24 15 05 15" src="https://github.com/hamsangjin/TIL/assets/103736614/748328a0-fa5e-4a24-94e4-717e38c17016">
+</p>
+
+- 하지만 클라이언트인 `OrderServiceImpl`이 `DiscountPolicy` 인터페이스뿐만 아니라 `FixDiscountPolicy`인 구체 클래스도 함께 의존하고 있어 DIP 위반이다.
+
+</br>
+
+- **정책 변경**
+<p align=center>
+<img width="584" alt="스크린샷 2024-01-24 15 06 38" src="https://github.com/hamsangjin/TIL/assets/103736614/a39ac9d0-5979-48bf-a318-5cd1c05d53be">
+</p>
+
+- 그래서 아까처럼 `FixDiscountPolicy`를 `RateDiscountPolicy`로 변경하는 순간 `OrderServiceImpl`의 소스 코드도 함께 변경해야 해서 **OCP 위반**이다.
+
+</br>
+
+### 어떻게 문제를 해결할 수 있을까?
+
+- 클라이언트 코드인 `OrderServiceImpl` 은 `DiscountPolicy`의 인터페이스뿐만 아니라 구체 클래스도 함께 의존한다.
+- 그래서 구체 클래스를 변경할 때 클라이언트 코드도 함께 변경해야 한다.
+- 아까 [기대했던 의존관계](#의존-관계)처럼 추상(인터페이스)에만 의존하도록 변경해 **DIP 위반**을 해결해보자
+
+</br>
+
+- 인터페이스에만 의존하도록 코드 변경
+```java
+ public class OrderServiceImpl implements OrderService {
+     //private final DiscountPolicy discountPolicy = new RateDiscountPolicy();
+     private DiscountPolicy discountPolicy;
+}
+```
+
+- 이렇게 인터페이스에만 의존하도록 변경했지만, 구현체가 없는데 어떻게 코드를 실행할까?
+- 실제로 실행을 해보면 `NPE(Null Pointer Exception)`가 발생한다.
+
+</br>
+
+> 따라서 누군가가 클라이언트인 `OrderServiceImpl`에 `DiscountPolicy`의 구현체를 대신 생성하고 주입해줘야 한다.
+
+</br>
+
+---
+
+</br>
+
+## 관심사의 분리
