--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -214,3 +214,258 @@ public class OrderServiceImpl implements OrderService {
 </br>
 
 ## 관심사의 분리
+
+- **애플리케이션을 하나의 공연**이라고 생각하고, **각각의 인터페이스를 배역**이라 생각했을 때, 실제 배역에 맞는 배우를 선택하는 건 누가할까?
+- 그거는 당연히 배우들이 정하는 것이 아니다.
+- 하지만 이전 코드는 마치 로미오 역할을 하는 홍길동이 줄리엣 역할을 하는 여자 주인공을 직접 선택하는 것과 같다.
+- 그렇다면 홍길동은 공연도 해야하며, 여자 주인공도 직접 선택해야하는 **다양한 책임**을 가지게 된다.
+
+</br>
+
+### 관심사를 분리하자
+- 배우는 본인의 역할인 배역을 수행하는 것에만 집중해야하며, 홍길동은 어떤 여자 주인공이 선택되더라도 똑같이 공연을 할 수 있어야 한다.
+- 공연을 구성하고, 담당을 섭외하고, 역할에 맞는 배우를 지정하는 책임을 담당하는 별도의 **공연 기획자**를 만들어 책임을 분리해보자.
+
+</br>
+
+### AppConfig 등장
+- 애플리케이션의 전체 동작 방식을 구성하기 위해, **구현 객체를 생성**하고, **연결하는 책임**을 가지는 별도의 **설정 클래스**를 만들자.
+
+- main/java/hello/core/AppConfig.java
+```java
+package hello.core;
+
+import hello.core.discount.FixDiscountPolicy;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import hello.core.member.MemoryMemberRepository;
+import hello.core.order.OrderService;
+import hello.core.order.OrderServiceImpl;
+
+public class AppConfig {
+
+    public MemberService memberService() {
+        return new MemberServiceImpl(new MemoryMemberRepository());
+    }
+
+    public OrderService orderService() {
+        return new OrderServiceImpl(
+                new MemoryMemberRepository(),
+                new FixDiscountPolicy());
+    }
+}
+```
+
+- `AppConfig`는 애플리케이션의 실제 동작에 필요한 구현 객체를 생성한다.
+  - `MemberServiceImpl`
+  - `MemoryMemberRepository`
+  - `OrderServiceImpl`
+  - `FixDiscountPolicy`
+- `AppConfig`는 생성한 객체 인스턴스의 참조를 생성자를 통해서 주입(연결)해준다.
+
+> 현재는 각 클래스에 생성자가 없어 컴파일 오류가 발생하니 바로 생성자를 만들어주자
+
+</br>
+
+- main/java/hello/core/member/MemberServiceImpl.java(생성자 주입)
+```java
+package hello.core.member;
+
+public class MemberServiceImpl implements MemberService{
+
+    private final MemberRepository memberRepository;
+
+    // 생성자 주입 !!
+    public MemberServiceImpl(MemberRepository memberRepository) {
+        this.memberRepository = memberRepository;
+    }
+
+    @Override
+    public void join(Member member) {
+        memberRepository.save(member);
+    }
+
+    @Override
+    public Member findMember(Long memberId) {
+        return memberRepository.findById(memberId);
+    }
+}
+
+```
+
+- 설계 변경으로 `MemberServiceImpl`은 구현체인 `MemoryMemberRepository`를 의존하지 않고, 인터페이스인 `MemberRepository`만 의존한다.
+- `MemberServiceImpl` 입장에선 생성자를 통해 어떤 구현 객체가 주입될지 알 수 없고, 어떤 구현 객체를 주입할지는 오직 외부(AppConfig)에서 결정된다.
+
+</br>
+
+- 클래스 다이어그램 그림
+<p align=center>
+<img width="589" alt="스크린샷 2024-01-24 16 04 09" src="https://github.com/hamsangjin/TIL/assets/103736614/c0152abd-4dc6-4ad2-919c-a5983329dc40">
+</p>
+
+- 객체의 생성과 연결은 `AppConfig`가 담당한다.
+- **DIP 완성** : `MemberServiceImpl`은 `MemberRepository`인 추상에만 의존하면 되며, 이제 구체 클래스를 몰라도 된다.
+- **관심사의 분리** : 객체를 생성하고 연결하는 역할과 실행하는 역할이 명확히 분리되었다.
+
+</br>
+
+- 회원 객체 인스턴스 다이어그램 그림
+<p align=center>
+<img width="599" alt="스크린샷 2024-01-24 16 09 41" src="https://github.com/hamsangjin/TIL/assets/103736614/7ef6c903-8b5d-4d34-826b-35852f63c67b">
+</p>
+
+- `appConfig` 객체는 `MemoryMemberRepository` 객체를 생성하고, 그 참조값을 `memberServiceImpl`을 생성하면서 생성자로 전달한다.
+- 클라이언트인 `memberServiceImpl` 입장에서 보면 의존관계를 마치 외부에서 주입해주는 것 같다고 해서 `DI(Dependency Injection)`, 우리말로 `의존관계 주입` 또는 `의존성 주입`이라고 한다.
+
+</br>
+
+- main/java/hello/core/order/OrderServiceImpl.java(생성자 주입)
+```java
+package hello.core.order;
+
+import hello.core.discount.DiscountPolicy;
+import hello.core.discount.FixDiscountPolicy;
+import hello.core.discount.RateDiscountPolicy;
+import hello.core.member.Member;
+import hello.core.member.MemberRepository;
+import hello.core.member.MemoryMemberRepository;
+
+public class OrderServiceImpl implements OrderService{
+
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+
+    // 생성자 주입 !!
+    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
+        this.memberRepository = memberRepository;
+        this.discountPolicy = discountPolicy;
+    }
+
+    @Override
+    public Order createOrder(Long memberId, String itemName, int itemPrice) {
+        Member member = memberRepository.findById(memberId);
+        int discountPrice = discountPolicy.discount(member, itemPrice);
+
+        return new Order(memberId, itemName, itemPrice, discountPrice);
+    }
+}
+
+```
+
+- 설계 변경으로 `OrderServiceImpl`은 구현체인 `FixDiscountPolicy`를 의존하지 않으며, 인터페이스인 `DiscountPolicy`만 의존한다.
+- `MemberServiceImpl`처럼 `OrderServiceImpl` 입장에선 생성자를 통해 어떤 구현 객체가 주입될지 알 수 없고, 어떤 구현 객체를 주입할지는 오직 외부(AppConfig)에서 결정된다.
+
+### AppConfig 실행
+
+- main/java/hello/core/MemberApp.java
+```java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+
+public class MemberApp {
+
+    public static void main(String[] args) {
+        AppConfig appConfig = new AppConfig();
+        MemberService memberService = appConfig.memberService();
+
+        Member member = new Member(1L, "member1", Grade.VIP);
+        memberService.join(member);
+
+        Member findMember = memberService.findMember(1L);
+        System.out.println("new member = " + member.getName());
+        System.out.println("find Member = " + findMember.getName());
+    }
+}
+
+```
+
+</br>
+
+- main/java/hello/core/OrderApp.java
+```java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import hello.core.order.Order;
+import hello.core.order.OrderService;
+import hello.core.order.OrderServiceImpl;
+
+public class OrderApp {
+    public static void main(String[] args) {
+        AppConfig appConfig = new AppConfig();
+        MemberService memberService = appConfig.memberService();
+        OrderService orderService = appConfig.orderService();
+
+        Long memberId = 1L;
+        Member member = new Member(memberId, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        Order order = orderService.createOrder(memberId, "itemA", 10000);
+        System.out.println("Order = " + order);
+        System.out.println("order.calculatePrice = " + order.calculatePrice());
+    }
+}
+```
+
+</br>
+
+### 테스트
+
+- test/java/hello/core/member/MemberServiceTest.java
+```java
+public class MemberServiceTest {
+
+    MemberService memberService;
+
+    @BeforeEach
+    public void beforeEach() {
+        AppConfig appConfig = new AppConfig();
+        memberService = appConfig.memberService();
+    }
+    ...
+}
+```
+
+</br>
+
+- test/java/hello/core/order/OrderServiceTest.java
+```java
+public class OrderServiceTest {
+    MemberService memberService;
+    OrderService orderService;
+
+    @BeforeEach
+    public void beforeEach(){
+        AppConfig appConfig = new AppConfig();
+        memberService = appConfig.memberService();
+        orderService = appConfig.orderService();
+    }
+    ...
+}
+```
+
+</br>
+
+> `@BeforeEach` : 각 테스트를 실행하기 전에 먼저 호출된다.
+
+</br>
+
+### 정리
+- `AppConfig`를 통해서 관심사를 확실하게 분리했다.
+- 배역, 배우를 생각했을 때, `AppConfig`는 공연 기획자다.
+- 따라서 `AppConfig`는 구체 클래스, 즉 배역에 맞는 담당 배우를 선택하며, 애플리케이션이 어떻게 동작해야 할지 전체 구성을 책임진다.
+- 이제 각 배우들은 담당 기능을 실행하는 책임만 지면 되듯이, `OrderServiceImpl`은 기능을 실행하는 책임만 지면 된다.
+
+</br>
+
+---
+
+</br>
+
+## AppConfig 리팩터링
