--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -469,3 +469,89 @@ public class OrderServiceTest {
 </br>
 
 ## AppConfig 리팩터링
+
+> 현재 `AppConfig`를 보면 **중복**이 있으며, **역할에 따른 구현**이 명확하게 안 보인다.
+
+### AppConfig 리팩터링
+
+- 기대하는 주문 도메인 그림
+<p align=center>
+<img width="615" alt="스크린샷 2024-01-25 13 15 59" src="https://github.com/hamsangjin/TIL/assets/103736614/71fcaa5e-1065-4d59-91c9-bff7abc12e0d">
+</p>
+
+</br>
+
+- 리팩터링 전 코드
+```java
+package hello.core;
+
+import hello.core.discount.FixDiscountPolicy;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import hello.core.member.MemoryMemberRepository;
+import hello.core.order.OrderService;
+import hello.core.order.OrderServiceImpl;
+
+public class AppConfig {
+
+    public MemberService memberService() {
+    return new MemberServiceImpl(new MemoryMemberRepository());
+    }
+
+    public OrderService orderService() {
+        return new OrderServiceImpl(
+            new MemoryMemberRepository(),
+            new FixDiscountPolicy());
+    }
+}
+```
+
+- 이제 중복을 제거하고, 역할에 따른 구현이 보이도록 리팩터링해보자.
+
+</br>
+
+- 리팩터링 후 코드
+```java
+package hello.core;
+
+import hello.core.discount.DiscountPolicy;
+import hello.core.discount.FixDiscountPolicy;
+import hello.core.member.MemberRepository;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import hello.core.member.MemoryMemberRepository;
+import hello.core.order.OrderService;
+import hello.core.order.OrderServiceImpl;
+
+public class AppConfig {
+    
+    public MemberRepository memberRepository() {
+        return new MemoryMemberRepository();
+    }
+
+    public DiscountPolicy discountPolicy(){
+        return new FixDiscountPolicy();
+    }
+    
+    public MemberService memberService() {
+        return new MemberServiceImpl(memberRepository());
+    }
+
+    public OrderService orderService() {
+        return new OrderServiceImpl(
+                memberRepository(),
+                discountPolicy());
+    }
+}
+```
+
+- `new MemoryMemberRepository()` 부분이 중복 제거되었으며, 이제 `AppConfig`를 보면 **역할과 구현 클래스**가 한 눈에 들어와, 애플리케이션 전체 구성이 어떻게 되어있는지 빠르게 파악할 수 있게 되었다.
+
+</br>
+
+---
+
+</br>
+
+## 새로운 구조와 할인 정책 적용
+
