docs : 새로운 구조와 할인 정책 적용 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -555,3 +555,42 @@ public class AppConfig {
 
 ## 새로운 구조와 할인 정책 적용
 
+- 이제 정액 할인 정책 `FixDiscountPolicy`를 정률 할인 정책 `RateDiscountPolicy`으로 변경해보자
+- 예전과 달리 `AppConfig`의 추가로 아래 그림과 같이 애플리케이션이 크게 **사용영역과, 객체를 구성하고 구성하는 영역**으로 분리되었다.
+
+</br>
+
+- 사용, 구성의 분리 그림
+<p align=center>
+<img width="617" alt="스크린샷 2024-01-25 13 53 31" src="https://github.com/hamsangjin/TIL/assets/103736614/7af836d9-d85a-460e-b914-80306a518de0">
+</p>
+
+- 할인 정책의 변경 그림
+<p align=center>
+<img width="608" alt="스크린샷 2024-01-25 13 54 07" src="https://github.com/hamsangjin/TIL/assets/103736614/b5726e2d-09f5-480e-ab6a-2174b3e07bcc">
+</p>
+
+- 이제 `FixDiscountPolicy`를 `RateDiscountPolicy`로 변경해도 구성 영역만 영향을 받고, 사용 영역은 전혀 영향을 받지 않게 되었다.
+
+</br>
+
+- 할인 정책의 변경 구성 영역 코드
+```java
+public class AppConfig {
+    public DiscountPolicy discountPolicy() {
+//        return new FixDiscountPolicy();
+        return new RateDiscountPolicy();
+    }
+    ...
+}
+```
+
+- 이렇게 `AppConfig`에서 할인 정책 역할을 담당하는 구현체를 `FixDiscountPolicy`에서 `RateDiscountPolicy` 객체로 변경만 하면 **사용영역**의 어떤 코드도 변경할 필요가 없다.
+
+</br>
+
+---
+
+</br>
+
+## 전체 흐름 정리
