docs : 전체 흐름 정리 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -594,3 +594,37 @@ public class AppConfig {
 </br>
 
 ## 전체 흐름 정리
+
+### 새로운 할인 정책 개발
+- **다형성** 덕분에 새로운 정률 할인 정책 코드를 추가로 개발하는 것 자체는 아무 문제가 없었다.
+
+</br>
+
+### 새로운 할인 정책 적용과 문제점
+- 하지만 새로 개발한 정률 할인 정책을 적용하려고 하니 클라이언트 코드인 **주문 서비스 구현체(OrderServiceImpl)** 또한 함께 변경했어야 했다. -> `OCP 위반`
+- 또, 주문 서비스 클라이언트가 인터페이스인 `DiscountPolicy`뿐만 아니라, 구현 클래스인 `FixDiscountPolicy`도 함께 의존했다. -> `DIP 위반`
+
+</br>
+
+### 관심사의 분리
+- 애플리케이션의 전체 동작 방식을 구성하기 위해, `AppConfig`에게 구현 객체를 생성하고, 연결하게 했다.
+- 그렇게 클라이언트 객체는 책임이 명확해져서 자신의 역할을 실행하는 것에만 집중할 수 있게 되었다.
+
+</br>
+
+### AppConfig 리팩터링
+- 구성 정보에서 역할과 구현을 명확하게 분리해서, 역할이 잘 드러나며 중복이 제거되었다.
+
+</br>
+
+### 새로운 구조와 할인 정책 적용
+- `AppConfig`의 등장으로 애플리케이션이 크게 사용 영역과, 객체를 구성하는 구성 영역으로 분리되었다.
+- 따라서, 정액 할인 정책에서 정률 할인 정책으로 변경해도 `AppConfig`가 있는 구성 영역만 변경하면 된다.
+
+</br>
+
+---
+
+</br>
+
+## 좋은 객체 지향 설계의 5가지 원칙의 적용
