--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -472,7 +472,7 @@ public class OrderServiceTest {
 
 > 현재 `AppConfig`를 보면 **중복**이 있으며, **역할에 따른 구현**이 명확하게 안 보인다.
 
-### AppConfig 리팩터링
+### AppConfig 리팩토링
 
 - 기대하는 주문 도메인 그림
 <p align=center>
@@ -612,7 +612,7 @@ public class AppConfig {
 
 </br>
 
-### AppConfig 리팩터링
+### AppConfig 리팩토링
 - 구성 정보에서 역할과 구현을 명확하게 분리해서, 역할이 잘 드러나며 중복이 제거되었다.
 
 </br>
@@ -628,3 +628,33 @@ public class AppConfig {
 </br>
 
 ## 좋은 객체 지향 설계의 5가지 원칙의 적용
+
+### SRP 단일 책임 원칙
+> 한 클래스는 하나의 책임만 가져야한다.
+
+- 클라이언트 객체는 직접 구현 객체를 생성하고, 연결하고, 다양한 책임을 가지고 있었지만, SRP 단일 책임 원칙을 따르면서 관심사를 분리했다.
+- 그렇게 구현 객체를 생성하고 연결하는 책임은 `AppConfig`가 담당했고, 클라이언트 객체는 실행하는 책임만 담당하게 되어 `SRP 원칙`을 지키게 됐다.
+
+</br>
+
+### DIP 의존관계 역전 원칙
+> 프로그래머는 "추상화에 의존해야지, 구체화에 의존하면 안 된다." 의존성 주입은 이 원칙을 따르는 방법 중 하나다.
+
+- 새로운 할인 정책을 개발하고, 적용하려고 하니 **클라이언트가 인터페이스뿐만 아니라 구현 클래스에도 의존**하고 있어, 클라이언트 코드도 함께 변경해야 했다.
+- 그래서 **클라이언트가 인터페이스에만 의존하도록 변경**하고, 동시에 `AppConfig`가 클라이언트에게 **의존관계 주입**을 해 `DIP 원칙`을 지키게 됐다.
+
+</br>
+
+### OCP 개방-폐쇄 원칙
+> 소프트웨어 요소는 확장에는 열려 있으나 변경에는 닫혀 있어야 한다.
+
+- **다형성**을 사용하고 클라이언트가 `DIP 원칙`을 지키게 되면서, 애플리케이션을 **사용 영역과 구성 영역**으로 나눴다.
+- 따라서, `AppConfig`가 의존 관계를 변경해 클라이언트 코드에 주입하므로, 클라이언트 코드를 변경하지 않게 되어 `OCP 원칙`을 지키게 됐다.
+
+</br>
+
+---
+
+</br>
+
+## IoC, DI, 그리고 컨테이너
