--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -658,3 +658,61 @@ public class AppConfig {
 </br>
 
 ## IoC, DI, 그리고 컨테이너
+
+### 제어의 역전 IoC(Inversion of Control)
+- 기존 프로그램은 클라이언트 구현 객체가 스스로 필요한 서버 구현 객체를 생성하고, 연결하고, 실행하는 식으로 **구현 객체가 프로그램의 제어 흐름을 스스로 조종**했었다.
+- 반면에 `AppConfig`가 등장한 이후 구현 객체는 자신의 로직을 실행하는 역할만 담당하게 됐고, 프로그램의 제어 흐름은 이제 `AppConfig`가 정했으며, 예를 들어서 `OrderServiceImpl`은 필요한 인터페이스들을 호출하지만 어떤 구현 객체가 실행될지 모른다.
+- 프로그램에 대한 제어 흐름에 대한 권한은 모두 `AppConfig`가 가지고 있으며, 심지어 `OrderServiceImpl`도 `AppConfig`가 생성하고, `OrderServiceImpl`이 아닌 `OrderSerivce` 인터페이스의 다른 구현 객체를 생성하고 실행할 수 있다.
+- 이렇게 프로그램의 제어 흐름을 직접 제어하는 것이 아니라 **외부에서 관리하는 것**을 `제어의 역전(IoC)`이라 한다.
+
+</br>
+
+#### 프레임워크 vs 라이브러리
+- `프레임워크` : 내가 작성한 코드를 제어하고, 대신 실행하는 것(JUnit)
+- `라이브러리` : 내가 작성한 코드가 직접 제어의 흐름을 담당하는 것
+
+</br>
+
+### 의존관계 주입 DI(Dependency Injection)
+- `OrderServiceImpl`은 `DiscountPolicy` 인터페이스에 의존하며, 실제 어떤 구현 객체가 사용될지는 모른다.
+- 의존관계는 정적인 클래스 의존관계와 실행 시점에 결정되는 동적인 객체(인스턴스) 의존 관계 둘을 분리해서 생각해야 한다.
+
+</br>
+
+#### 정적인 클래스 의존 관계
+- 클래스가 사용하는 `import` 코드만 봐도 의존관계를 쉽게 판단할 수 있으며, 정적인 의존 관계는 **애플리케이션을 실행하지 않아도 분석**할 수 있다.
+
+- 클래스 다이어그램
+<p align=center>
+<img width="613" alt="스크린샷 2024-01-25 16 34 34" src="https://github.com/hamsangjin/TIL/assets/103736614/3592231d-9d72-46f3-a527-1ca907e39c1c">
+</p>
+
+- `OrderServiceImpl`은 `MemberRepository`, `DiscountPolicy`에 의존한다는 것을 알 수 있지만, 이것만으로 실제 어떤 객체가 `OrderServiceImpl`에 주입될지 알 수 없다.
+
+</br>
+
+#### 동적인 객체 인스턴스 의존 관계
+> 애플리케이션 실행 시점에 실제 생성된 객체 인스턴스의 참조가 연결된 의존 관계다.
+
+- 객체 다이어그램
+<p align=center>
+<img width="597" alt="스크린샷 2024-01-25 16 43 13" src="https://github.com/hamsangjin/TIL/assets/103736614/ffcdc22d-db43-4789-b137-375a6c65d33a">
+</p>
+
+- 애플리케이션 **실행 시점**에 외부에서 실제 구현 객체를 생성하고 클라이언트에 전달해서, 클라이언트와 서버의 실제 의존관계가 연결되는 것을 `의존관계 주입`이라고 한다.
+- 객체 인스턴스를 생성하고, 그 참조값을 전달해서 연결된다.
+- 의존관계 주입을 사용하면 클라이언트 코드를 변경하지 않고 **클라이언트가 호출하는 대상의 타입 인스턴스를 변경**할 수 있고, 정적인 클래스 의존관계를 변경하지 않고 **동적인 객체 인스턴스 의존관계를 쉽게 변경**할 수 있다.
+
+</br>
+
+### IoC 컨테이너, DI 컨테이너
+- `AppConfig`처럼 객체를 생성하고 관리하면서 의존관계를 연결해주는 것을 `IoC 컨테이너` 또는 `DI 컨테이너`라 한다.
+- 최근에는 의존관계 주입에 초점을 맞추어 주로 DI 컨테이너라 하며, 또는 어셈블러, 오브젝터 팩토리 등으로 불리기도 한다.
+
+</br>
+
+---
+
+</br>
+
+## 스프링으로 전환하기
