--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -716,3 +716,143 @@ public class AppConfig {
 </br>
 
 ## 스프링으로 전환하기
+
+> 이제 순수한 자바 코드로 DI를 적용하는 것이 아닌, 스프링을 활용해보자.
+
+</br>
+
+### AppConfig 스프링 기반으로 변경
+
+- main/java/hello/core/AppConfig.java
+```java
+package hello.core;
+
+import hello.core.discount.DiscountPolicy;
+import hello.core.discount.FixDiscountPolicy;
+import hello.core.discount.RateDiscountPolicy;
+import hello.core.member.MemberRepository;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import hello.core.member.MemoryMemberRepository;
+import hello.core.order.OrderService;
+import hello.core.order.OrderServiceImpl;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public MemberRepository memberRepository() {
+        return new MemoryMemberRepository();
+    }
+
+    @Bean
+    public DiscountPolicy discountPolicy(){
+        return new RateDiscountPolicy();
+    }
+
+    @Bean
+    public MemberService memberService() {
+        return new MemberServiceImpl(memberRepository());
+    }
+
+    @Bean
+    public OrderService orderService() {
+        return new OrderServiceImpl(
+                memberRepository(),
+                discountPolicy());
+    }
+}
+```
+
+- `AppConfig`에 설정을 구성한다는 뜻의 `@Configuration`을 붙여주고, 각 메소드에 `@Bean`을 붙여줘 스프링 컨테이너에 스프링 빈으로 등록한다.
+
+</br>
+
+### MemberApp에 스프링 컨테이너 적용
+- main/java/hello/core/MemberApp.java
+
+```java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+
+public class MemberApp {
+
+    public static void main(String[] args) {
+//        AppConfig appConfig = new AppConfig();
+//        MemberService memberService = appConfig.memberService();
+        ApplicationContext applicationContext = new AnnotationConfigApplicationContext(AppConfig.class);
+        MemberService memberService = applicationContext.getBean("memberService", MemberService.class);
+
+        Member member = new Member(1L, "member1", Grade.VIP);
+        memberService.join(member);
+
+        Member findMember = memberService.findMember(1L);
+
+        System.out.println("new member = " + member.getName());
+        System.out.println("find Member = " + findMember.getName());
+    }
+}
+
+```
+
+</br>
+
+### OrderApp에 스프링 컨테이너 적용
+```java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import hello.core.order.Order;
+import hello.core.order.OrderService;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+
+public class OrderApp {
+
+    public static void main(String[] args) {
+//        AppConfig appConfig = new AppConfig();
+//        MemberService memberService = appConfig.memberService();
+//        OrderService orderService = appConfig.orderService();
+
+        ApplicationContext applicationContext = new AnnotationConfigApplicationContext(AppConfig.class);
+        MemberService memberService = applicationContext.getBean("memberService", MemberService.class);
+        OrderService orderService = applicationContext.getBean("orderService", OrderService.class);
+
+        long memberId = 1L;
+        Member member = new Member(memberId, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        Order order = orderService.createOrder(memberId, "itemA", 10000);
+
+        System.out.println("order = " + order);
+        System.out.println("order.calculatePrice = " + order.calculatePrice());
+    }
+}
+```
+
+</br>
+
+- 두 코드를 실행하면 스프링 관련 로그가 몇 줄 실행되며 기존과 동일한 결과가 출력된다.
+<p align=center>
+<img width="1085" alt="스크린샷 2024-01-25 17 21 43" src="https://github.com/hamsangjin/TIL/assets/103736614/1553243c-35a3-49b0-b9aa-f095cdcebd45">
+<img width="1085" alt="스크린샷 2024-01-25 17 21 22" src="https://github.com/hamsangjin/TIL/assets/103736614/225bb2c3-2fd5-4d75-94db-effc3debf9bf">
+</p>
+
+</br>
+
+### 스프링 컨테이너
+- `ApplicationContext`를 스프링 컨테이너라 하며, 기존에는 `AppConfig`를 사용해 직접 객체를 생성하고 의존관계 주입을 했지만, 이제부터는 스프링 컨테이너를 통해서 사용한다.
+- 스프링 컨테이너는 `@Configuration`이 붙은 `AppConfig`를 설정 정보로 사용하며, 여기서 `@Bean`이라 적힌 메소드를 모두 호출해 반환된 객체를 스프링 컨테이너에 등록하고, 이렇게 **스프링 컨테이너에 등록된 객체를 스프링 빈**이라고 한다.
+- 스프링 빈은 `@Bean`이 붙은 메소드 명을 스프링 빈의 이름으로 사용한다.
+- 기존엔 필요한 객체를 `AppConfig`를 사용해 직접 조회했지만, 이제 스프링 컨테이너를 통해 필요한 스프링 빈(객체)을 찾아야하며, 스프링 빈은 `applicationContext.getBean()` 메소드를 사용해 찾을 수 있다.
+
+> 이렇게 자바코드에서 스프링을 이용하는 것으로 변경되었는데, 어떤 장점이 있을지 다음 장부터 공부해보자.
