docs : 2. 컨테이너에 등록된 모든 빈 조회 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
+++ b/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
@@ -82,3 +82,96 @@ ApplicationContext applicationContext = new AnnotationConfigApplicationContext(A
 이렇게 **스프링 컨테이너를 생성**하고, 설정 정보를 참고해서 **스프링 빈도 등록**하고 **의존 관계도 설정**했다. </br>
 이제 스프링 컨테이너에서 **데이터를 조회**해보자.
 
+</br>
+
+---
+
+</br>
+
+## 2. 컨테이너에 등록된 모든 빈 조회
+
+> 스프링 컨테이너에 실제 스프링 빈들이 잘 등록되었는지 확인해보자.
+
+- test/java/hello/core/beanfind/ApplicationContextInfoTest.java
+```java
+package hello.core.beanfind;
+
+import hello.core.AppConfig;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.config.BeanDefinition;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+
+public class ApplicationContextInfoTest {
+
+    AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(AppConfig.class);
+
+    @Test
+    @DisplayName("모든 빈 출력하기")
+    void findAllBean(){
+
+        String[] beanDefinitionNames = ac.getBeanDefinitionNames();
+
+        for (String beanDefinitionName : beanDefinitionNames) {
+            Object bean = ac.getBean(beanDefinitionName);  // type 지정을 안 했기 때문에 object로 꺼내짐
+            System.out.println("name=" + beanDefinitionName + " object=" + bean);
+        }
+    }
+
+    @Test
+    @DisplayName("애플리케이션 빈 출력하기")
+    void findApplicationBean(){
+
+        String[] beanDefinitionNames = ac.getBeanDefinitionNames();
+
+        for (String beanDefinitionName : beanDefinitionNames) {
+            BeanDefinition beanDefinition = ac.getBeanDefinition(beanDefinitionName);
+
+            if (beanDefinition.getRole() == BeanDefinition.ROLE_APPLICATION) {
+                Object bean = ac.getBean(beanDefinitionName);
+                System.out.println("name=" + beanDefinitionName + " object=" + bean);
+            }
+        }
+    }
+}
+```
+
+</br>
+
+- `for문 자동 완성` : 리스트나 배열이 있는 경우 `iter`을 입력하고 자동완성시키면 해당 리스트나 배열을 이용해 for문을 완성 시켜준다.
+```java
+String[] beanDefinitionNames = ac.getBeanDefinitionNames();
+
+// `iter` 입력 후 아래 for문 생성
+for (String beanDefinitionName : beanDefinitionNames) {
+}
+```
+
+</br>
+
+- `모든 빈 출력하기` : 스프링에 등록된 모든 빈 정보를 출력해준다.
+  - `ac.getBeanDefinitionNames()` : 스프링에 등록된 모든 빈 이름을 조회한다.
+  - `ac.getBean()` : 빈 이름으로 빈 객체(인스턴스)를 조회한다.
+  - 결과 출력
+<p align=center>
+<img width="1317" alt="스크린샷 2024-01-26 14 11 29" src="https://github.com/hamsangjin/TIL/assets/103736614/fc25c506-34d9-4959-8f72-4346dfde1f3a">
+</p>
+
+</br>
+
+- `애플리케이션 빈 출력하기` : 스프링 내부에서 사용하는 빈을 제외하고, 내가 등록한 빈만 출력해보자.
+  - `getRole()` : 빈의 정의된 여러가지 역할 중 어떤 역할인지를 리턴해준다.
+  - `ROLE_APPLICATION` : 일반적으로 사용자가 정의한 빈을 의미한다.
+  - `ROLE_INFRASTRUCTURE` : 스프링이 내부에서 사용하는 빈
+  - 결과 출력
+<p align=center>
+<img width="644" alt="스크린샷 2024-01-26 14 11 43" src="https://github.com/hamsangjin/TIL/assets/103736614/7e078b6b-e56a-4123-a91e-39aa30d85b2b">
+</p>
+
+</br>
+
+---
+
+</br>
+
+## 3. 스프링 빈 조회 - 기본
