docs : 3. 스프링 빈 조회 - 기본 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
+++ b/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
@@ -175,3 +175,71 @@ for (String beanDefinitionName : beanDefinitionNames) {
 </br>
 
 ## 3. 스프링 빈 조회 - 기본
+
+스프링 컨테이너에서 스프링 빈을 찾는 가장 기본적인 조회방법을 알아보자.
+- `ac.getBean(빈이름, 타입)`
+- `ac.getBean(타입)`
+- 만약 조회 대상인 스프링 빈이 없으면, `NoSuchBeanDefinitionException: No bean named 'xxxxx' available`라고 예외가 발생한다.
+
+</br>
+
+- test/java/hello/core/beanfind/ApplicationContextBasicFindTest.java
+```java
+package hello.core.beanfind;
+
+import hello.core.AppConfig;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.NoSuchBeanDefinitionException;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+
+import static org.assertj.core.api.Assertions.*;
+
+public class ApplicationContextBasicFindTest {
+
+    AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(AppConfig.class);
+
+    @Test
+    @DisplayName("빈 이름으로 조회")
+    void findBeanByName() {
+        MemberService memberService = ac.getBean("memberService", MemberService.class);
+        assertThat(memberService).isInstanceOf(MemberServiceImpl.class);
+    }
+
+    @Test
+    @DisplayName("이름 없이 타입만으로 조회")
+    void findBeanByType() {
+        MemberService memberService = ac.getBean(MemberService.class);
+        assertThat(memberService).isInstanceOf(MemberServiceImpl.class);
+    }
+
+    @Test
+    @DisplayName("구체 타입으로 조회")
+    void findBeanByName2() {
+        MemberServiceImpl memberService = ac.getBean(MemberServiceImpl.class);
+        assertThat(memberService).isInstanceOf(MemberServiceImpl.class);
+    }
+
+    @Test
+    @DisplayName("빈 이름으로 조회X") void findBeanByNameX() {
+        //ac.getBean("xxxxx", MemberService.class); : 
+        Assertions.assertThrows(NoSuchBeanDefinitionException.class, () -> ac.getBean("xxxxx", MemberService.class));
+    }
+}
+```
+
+- `isInstanceOf()` : 어떤 **객체 인스턴스**를 사용하는지 확인할 때 사용하는 연산자
+- `구체 타입으로 조회` : 이 테스트 코드는 **구현체 타입**에 의존하기 때문에 좋지 않은 코드이며, 유연성이 떨어진다.
+- `빈 이름으로 조회 X` : `ac.getBean("xxxxx", MemberService.class)` 이 코드를 실행했을 때, `NoSuchBeanDefinitionException.class`라는 예외가 발생해야 성공적으로 테스트를 성공함
+  - `assertThrows(예외 타입, 실행 코드)` : 두 번째 인자인 실행 코드를 실행해, 첫 번째 인자인 예외 타입과 같은지 검사하는 연산자
+
+</br>
+
+---
+
+</br>
+
+## 4. 스프링 빈 조회 - 동일한 타입이 둘 이상
