docs : 4. 스프링 빈 조회 - 동일한 타입이 둘 이상 part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
+++ b/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
@@ -233,8 +233,14 @@ public class ApplicationContextBasicFindTest {
 
 - `isInstanceOf()` : 어떤 **객체 인스턴스**를 사용하는지 확인할 때 사용하는 연산자
 - `구체 타입으로 조회` : 이 테스트 코드는 **구현체 타입**에 의존하기 때문에 좋지 않은 코드이며, 유연성이 떨어진다.
-- `빈 이름으로 조회 X` : `ac.getBean("xxxxx", MemberService.class)` 이 코드를 실행했을 때, `NoSuchBeanDefinitionException.class`라는 예외가 발생해야 성공적으로 테스트를 성공함
+
+</br>
+
+- `빈 이름으로 조회 X` : `ac.getBean("xxxxx", MemberService.class);`를 실행했을 때 아래와 같은 예외가 발생하는 걸 확인하고, 그에 맞게 테스트 코드를 작성했다.
   - `assertThrows(예외 타입, 실행 코드)` : 두 번째 인자인 실행 코드를 실행해, 첫 번째 인자인 예외 타입과 같은지 검사하는 연산자
+<p align=center>
+<img width="1094" alt="스크린샷 2024-01-26 15 20 09" src="https://github.com/hamsangjin/TIL/assets/103736614/c795a7fa-ea2c-42a9-af3c-4cd03e0e1f89">
+</p>
 
 </br>
 
@@ -243,3 +249,98 @@ public class ApplicationContextBasicFindTest {
 </br>
 
 ## 4. 스프링 빈 조회 - 동일한 타입이 둘 이상
+
+타입으로 조회할 때, 같은 타입의 스프링 빈이 둘 이상이면 오류가 발생할 수 있으며, 이때는 빈 이름을 지정해주자.
+- `ac.getBeanOfType()` : 해당 타입의 모든 빈을 조회할 수 있다.
+
+</br>
+
+- test/java/hello/core/beanfind/ApplicationContextSameBeanFindTest.java
+```java
+package hello.core.beanfind;
+
+import hello.core.member.MemberRepository;
+import hello.core.member.MemoryMemberRepository;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.NoUniqueBeanDefinitionException;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+import java.util.Map;
+
+import static org.assertj.core.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
+public class ApplicationContextSameBeanFindTest {
+    AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(SameBeanConfig.class);
+
+    @Test
+    @DisplayName("타입으로 조회시 같은 타입이 둘 이상 있으면, 중복 오류가 발생한다")
+    void findBeanByTypeDuplicate() {
+//        MemberRepository bean = ac.getBean(MemberRepository.class);
+        assertThrows(NoUniqueBeanDefinitionException.class, () -> ac.getBean(MemberRepository.class));
+    }
+
+    @Test
+    @DisplayName("타입으로 조회시 같은 타입이 둘 이상 있으면, 빈 이름을 지정하면 된다")
+    void findBeanByName(){
+        MemberRepository memberRepository = ac.getBean("memberRepository1", MemberRepository.class);
+        assertThat(memberRepository).isInstanceOf(MemberRepository.class);
+    }
+
+    @Test
+    @DisplayName("특정 타입을 모두 조회하기")
+    void findAllBeanByType() {
+
+        Map<String, MemberRepository> beansOfType = ac.getBeansOfType(MemberRepository.class);
+
+        for (String key : beansOfType.keySet()) {
+            System.out.println("key = " + key + " value = " + beansOfType.get(key));
+        }
+
+        System.out.println("beansOfType = " + beansOfType);
+
+        assertThat(beansOfType.size()).isEqualTo(2);
+    }
+
+    // key = memberRepository1 value = hello.core.member.MemoryMemberRepository@79ab3a71
+    // key = memberRepository2 value = hello.core.member.MemoryMemberRepository@6e5bfdfc
+
+    // static class : 이 클래스 안에서만 사용하겠다.
+    @Configuration
+    static class SameBeanConfig {
+        @Bean
+        public MemberRepository memberRepository1() {
+            return new MemoryMemberRepository();
+        }
+        @Bean
+        public MemberRepository memberRepository2() {
+            return new MemoryMemberRepository();
+        }
+    }
+
+}
+
+```
+
+- `타입으로 조회시 같은 타입이 둘 이상 있으면, 중복 오류가 발생한다` : `ac.getBean(MemberRepository.class);`를 실행했을 때 아래와 같은 예외가 발생하는 걸 확인하고, 그에 맞게 테스트 코드를 작성했다.
+<p align=center>
+<img width="1295" alt="스크린샷 2024-01-26 15 17 27" src="https://github.com/hamsangjin/TIL/assets/103736614/d5781224-a8f1-455a-925b-cd55ead7baaf">
+</p>
+
+- `특정 타입을 모두 조회하기` : `MemberRepository` 클래스 타입을 가진 Bean들의 key값과 value값을 출력해준다.
+  - `getBeansOfType(타입)` : 동일한 반환 타입을 가진 Bean을 Map 객체로 받을 수 있다.
+  - `keySet()` : Map에 들어있는 모든 key값을 꺼내준다.
+  - `beansOfType.get(key)` : `Map` 안의 value 값 꺼내기
+
+- `static class 클래스명` : 해당 클래스 `SameBeanConfig`를 상위 클래스 `ApplicationContextSameBeanFindTest`에서만 사용하겠다.
+
+</br>
+
+---
+
+</br>
+
+## 5. 스프링 빈 조회 - 상속 관계
