docs : 목차 이동 불가 해결

--- a/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
+++ b/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
@@ -4,18 +4,18 @@
 
 ## 목차
 
-- [1. 스프링 컨테이너 생성](#1.-스프링-컨테이너-생성)
-- [2. 컨테이너에 등록된 모든 빈 조회](#2.-컨테이너에-등록된-모든-빈-조회)
-- [3. 스프링 빈 조회 - 기본](#3.-스프링-빈-조회---기본)
-- [4. 스프링 빈 조회 - 동일한 타입이 둘 이상](#4.-스프링-빈-조회---동일한-타입이-둘-이상)
-- [5. 스프링 빈 조회 - 상속 관계](#5.-스프링-빈-조회---상속-관계)
-- [6. BeanFactory와 ApplicationContext](#6.-BeanFactory와-ApplicationContext)
-- [7. 다양한 설정 형식 지원 - 자바 코드, XML](#7.-다양한-설정-형식-지원---자바-코드,-XML)
-- [8. 스프링 빈 설정 메타 정보 - BeanDefinition](#8.-스프링-빈-설정-메타-정보---BeanDefinition)
+- [스프링 컨테이너 생성](#스프링-컨테이너-생성)
+- [컨테이너에 등록된 모든 빈 조회](#컨테이너에-등록된-모든-빈-조회)
+- [스프링 빈 조회 - 기본](#스프링-빈-조회---기본)
+- [스프링 빈 조회 - 동일한 타입이 둘 이상](#스프링-빈-조회---동일한-타입이-둘-이상)
+- [스프링 빈 조회 - 상속 관계](#스프링-빈-조회---상속-관계)
+- [BeanFactory와 ApplicationContext](#beanfactory와-applicationcontext)
+- [다양한 설정 형식 지원 - 자바 코드, XML](#다양한-설정-형식-지원---자바-코드,-xml)
+- [스프링 빈 설정 메타 정보 - BeanDefinition](#스프링-빈-설정-메타-정보---beandefinition)
 
 </br>
 
-## 1. 스프링 컨테이너 생성
+## 스프링 컨테이너 생성
 
 > 스프링 컨테이너가 생성되는 과정을 알아보자.
 
@@ -88,7 +88,7 @@ ApplicationContext applicationContext = new AnnotationConfigApplicationContext(A
 
 </br>
 
-## 2. 컨테이너에 등록된 모든 빈 조회
+## 컨테이너에 등록된 모든 빈 조회
 
 > 스프링 컨테이너에 실제 스프링 빈들이 잘 등록되었는지 확인해보자.
 
@@ -174,7 +174,7 @@ for (String beanDefinitionName : beanDefinitionNames) {
 
 </br>
 
-## 3. 스프링 빈 조회 - 기본
+## 스프링 빈 조회 - 기본
 
 스프링 컨테이너에서 스프링 빈을 찾는 가장 기본적인 조회방법을 알아보자.
 - `ac.getBean(빈이름, 타입)`
@@ -248,7 +248,7 @@ public class ApplicationContextBasicFindTest {
 
 </br>
 
-## 4. 스프링 빈 조회 - 동일한 타입이 둘 이상
+## 스프링 빈 조회 - 동일한 타입이 둘 이상
 
 타입으로 조회할 때, 같은 타입의 스프링 빈이 둘 이상이면 오류가 발생할 수 있으며, 이때는 빈 이름을 지정해주자.
 - `ac.getBeanOfType()` : 해당 타입의 모든 빈을 조회할 수 있다.
@@ -343,4 +343,4 @@ public class ApplicationContextSameBeanFindTest {
 
 </br>
 
-## 5. 스프링 빈 조회 - 상속 관계
+## 스프링 빈 조회 - 상속 관계
