--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해 2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해 2 - 객체 지향 원리 적용.md
@@ -7,11 +7,11 @@
 - [새로운 할인 정책 개발](#새로운-할인-정책-개발)
 - [새로운 할인 정책 적용과 문제점](#새로운-할인-정책-적용과-문제점)
 - [관심사의 분리](#관심사의-분리)
-- [AppConfig 리팩터링](#AppConfig-리팩터링)
+- [AppConfig 리팩터링](#appconfig-리팩터링)
 - [새로운 구조와 할인 정책 적용](#새로운-구조와-할인-정책-적용)
 - [전체 흐름 정리](#전체-흐름-정리)
 - [좋은 객체 지향 설계의 5가지 원칙의 적용](#좋은-객체-지향-설계의-5가지-원칙의-적용)
-- [IoC, DI, 그리고 컨테이너](#IoC,-DI,-그리고-컨테이너)
+- [IoC, DI, 그리고 컨테이너](#ioc,-di,-그리고-컨테이너)
 - [스프링으로 전환하기](#스프링으로-전환하기)
 
 ## 새로운 할인 정책 개발
