--- a/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해 2 - 객체 지향 원리 적용.md
+++ b/Spring/Spring 핵심 원리 - 기본편/3. 스프링 핵심 원리 이해 2 - 객체 지향 원리 적용.md
@@ -11,10 +11,10 @@
 - [새로운 구조와 할인 정책 적용](#새로운-구조와-할인-정책-적용)
 - [전체 흐름 정리](#전체-흐름-정리)
 - [좋은 객체 지향 설계의 5가지 원칙의 적용](#좋은-객체-지향-설계의-5가지-원칙의-적용)
-- [IoC, DI, 그리고 컨테이너](#ioc,-di,-그리고-컨테이너)
+- [Ioc와 DI 그리고 컨테이너](#ioc와-di-그리고-컨테이너)
 - [스프링으로 전환하기](#스프링으로-전환하기)
 
-## 새로운 할인 정책 개발
+## 새로운, 할인 정책 개발
 
 ### 할인 정책 확장
 - `악덕 기획자` : 서비스 오픈 직전에 할인 정책을 지금처럼 고정 금액 할인이 아니라 좀 더 합리적인 주문 금액당 할인하는 **정률% 할인으로 변경**하고 싶어요.
@@ -657,7 +657,7 @@ public class AppConfig {
 
 </br>
 
-## IoC, DI, 그리고 컨테이너
+## Ioc와 DI 그리고 컨테이너
 
 ### 제어의 역전 IoC(Inversion of Control)
 - 기존 프로그램은 클라이언트 구현 객체가 스스로 필요한 서버 구현 객체를 생성하고, 연결하고, 실행하는 식으로 **구현 객체가 프로그램의 제어 흐름을 스스로 조종**했었다.
