--- a/Spring/Spring 핵심 원리 - 기본편/1. 객체 지향 설계와 스프링.md
+++ b/Spring/Spring 핵심 원리 - 기본편/1. 객체 지향 설계와 스프링.md
@@ -4,12 +4,12 @@
 
 ## 목차
 
-- [스프링이란?](#스프링이란?)
-- [좋은 객체 지향 프로그래밍이란?](#좋은-객체-지향-프로그래밍이란?)
-- [좋은 객체 지향 설계의 5가지 원칙(SOLID)](#좋은-객체-지향-설계의-5가지-원칙(SOLID))
+- [스프링이란](#스프링이란)
+- [좋은 객체 지향 프로그래밍이란](#좋은-객체-지향-프로그래밍이란)
+- [좋은 객체 지향 설계의 5가지 원칙 SOLID](#좋은-객체-지향-설계의-5가지-원칙-solid)
 - [객체 지향 설계와 스프링](#객체-지향-설계와-스프링)
 
-## 스프링이란?
+## 스프링이란
 
 > `Spring` : 어떤 특정한 하나가 아니라 여러가지 기술들의 모음이라고 볼 수 있다.
 
@@ -65,7 +65,7 @@
 
 </br>
 
-## 좋은 객체 지향 프로그래밍이란?
+## 좋은 객체 지향 프로그래밍이란
 
 ### 객체 지향 특징
 1. 추상화
@@ -183,7 +183,7 @@
 
 </br>
 
-## 좋은 객체 지향 설계의 5가지 원칙(SOLID)
+## 좋은 객체 지향 설계의 5가지 원칙 SOLID
 
 > `SOLID` : 클린코드로 유명한 로버트 마틴이 좋은 객체 지향 설계의 5가지 원칙을 정리
 
