docs : 목차 이동불가 오류 해결

--- a/Spring/Spring_입문/스프링 웹 개발 기초.md
+++ b/Spring/Spring_입문/스프링 웹 개발 기초.md
@@ -4,10 +4,10 @@
 
 ## 목차
 - [정적 컨텐츠](#정적-컨텐츠)
-- [MVC와 템플릿 엔진](#MVC와-템플릿-엔진)
-- [API](#API)
+- [MVC와 템플릿 엔진](#mvc와-템플릿-엔진)
+- [API](#api)
 
-- [회원 관리 예제(백엔드 개발)](#회원-관리-예제(백엔드-개발))
+- [회원 관리 예제의 백엔드 개발](#회원-관리-예제의-백엔드-개발)
   - [비즈니스 요구사항 정리](#비즈니스-요구사항-정리)
   - [회원 도메인과 리포지토리 만들기](#회원-도메인과-리포지토리-만들기)
   - [회원 리포지토리 테스트 케이스 작성](#회원-리포지토리-테스트-케이스-작성)
@@ -214,7 +214,7 @@ public class HelloController {
 
 </br>
 
-## 회원 관리 예제(백엔드 개발)
+## 회원 관리 예제의 백엔드 개발
 
 ### 비즈니스 요구사항 정리
 
