--- a/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
+++ b/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
@@ -10,7 +10,7 @@
 - [스프링 빈 조회 - 동일한 타입이 둘 이상](#스프링-빈-조회---동일한-타입이-둘-이상)
 - [스프링 빈 조회 - 상속 관계](#스프링-빈-조회---상속-관계)
 - [BeanFactory와 ApplicationContext](#beanfactory와-applicationcontext)
-- [다양한 설정 형식 지원 - 자바 코드, XML](#다양한-설정-형식-지원---자바-코드,-xml)
+- [다양한 설정 형식 지원 - 자바 코드 XML](#다양한-설정-형식-지원---자바-코드-xml)
 - [스프링 빈 설정 메타 정보 - BeanDefinition](#스프링-빈-설정-메타-정보---beandefinition)
 
 </br>
@@ -225,7 +225,7 @@ public class ApplicationContextBasicFindTest {
 
     @Test
     @DisplayName("빈 이름으로 조회X") void findBeanByNameX() {
-        //ac.getBean("xxxxx", MemberService.class); : 
+        //ac.getBean("xxxxx", MemberService.class); -> NoSuchBeanDefinitionException 예외 발생
         Assertions.assertThrows(NoSuchBeanDefinitionException.class, () -> ac.getBean("xxxxx", MemberService.class));
     }
 }
@@ -279,7 +279,7 @@ public class ApplicationContextSameBeanFindTest {
     @Test
     @DisplayName("타입으로 조회시 같은 타입이 둘 이상 있으면, 중복 오류가 발생한다")
     void findBeanByTypeDuplicate() {
-//        MemberRepository bean = ac.getBean(MemberRepository.class);
+//        MemberRepository bean = ac.getBean(MemberRepository.class); -> NoUniqueBeanDefinitionException 예외 발생
         assertThrows(NoUniqueBeanDefinitionException.class, () -> ac.getBean(MemberRepository.class));
     }
 
@@ -344,3 +344,113 @@ public class ApplicationContextSameBeanFindTest {
 </br>
 
 ## 스프링 빈 조회 - 상속 관계
+
+**부모 타입**으로 조회하면, **자식 타입**도 함께 조회한다. </br>
+그래서 모든 자바 객체의 최고 부모인 `Object` 타입으로 조회하면, 모든 스프링 빈을 조회한다.
+
+<p align=center>
+<img width="607" alt="스크린샷 2024-01-26 16 32 49" src="https://github.com/hamsangjin/TIL/assets/103736614/9f6840f2-8489-4805-b613-403513dcd88d">
+</p>
+
+</br>
+
+- test/java/hello/core/beanfind/ApplicationContextExtendsFindTest.java
+```java
+package hello.core.beanfind;
+
+import hello.core.discount.DiscountPolicy;
+import hello.core.discount.FixDiscountPolicy;
+import hello.core.discount.RateDiscountPolicy;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.NoUniqueBeanDefinitionException;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+import java.util.Map;
+
+import static org.assertj.core.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.*;
+
+public class ApplicationContextSameBeanFindTest {
+    AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(TestConfig.class);
+
+    @Test
+    @DisplayName("부모 타입으로 조회시, 자식이 둘 이상 있으면, 중복 오류가 발생한다")
+    void findBeanByParentTypeDuplicate(){
+//        DiscountPolicy bean = ac.getBean(DiscountPolicy.class); -> NoUniqueBeanDefinitionException 예외 발생
+        assertThrows(NoUniqueBeanDefinitionException.class, () -> ac.getBean(DiscountPolicy.class));
+
+    }
+
+    @Test
+    @DisplayName("부모 타입으로 조회시, 자식이 둘 이상 있으면, 빈 이름을 지정하면 된다")
+    void findBeanByParentTypeBeanName() {
+        DiscountPolicy discountPolicy = ac.getBean("rateDiscountPolicy", DiscountPolicy.class);
+        assertThat(discountPolicy).isInstanceOf(RateDiscountPolicy.class);
+    }
+
+    @Test
+    @DisplayName("특정 하위 타입으로 조회")
+    void findBeanBySubType(){
+        RateDiscountPolicy bean = ac.getBean(RateDiscountPolicy.class);
+        assertThat(bean).isInstanceOf(RateDiscountPolicy.class);
+    }
+
+    @Test
+    @DisplayName("부모 타입으로 모두 조회하기")
+    void findAllBeanByParentType(){
+        Map<String, DiscountPolicy> beansOfType = ac.getBeansOfType(DiscountPolicy.class);
+        assertThat(beansOfType.size()).isEqualTo(2);
+
+        for (String key : beansOfType.keySet()) {
+            System.out.println("key = " + key + " value=" + beansOfType.get(key));
+        }
+    }
+
+    @Test
+    @DisplayName("부모 타입으로 모두 조회하기 - Object")
+    void findAllBeanByObjectType(){
+        Map<String, Object> beansOfType = ac.getBeansOfType(Object.class);
+
+        for (String key : beansOfType.keySet()) {
+            System.out.println("key = " + key + " value=" + beansOfType.get(key));
+        }
+    }
+
+    @Configuration
+    static class TestConfig {
+        @Bean
+        public DiscountPolicy rateDiscountPolicy() {
+            return new RateDiscountPolicy();
+        }
+
+        @Bean
+        public DiscountPolicy fixDiscountPolicy() {
+            return new FixDiscountPolicy();
+        }
+    }
+}
+```
+
+- `부모 타입으로 모두 조회하기` : `DiscountPolicy`의 타입을 가진 Bean들을 모두 조회한다.
+  - 결과 사진 : `rateDiscountPolicy`와 `fixDiscountPolicy`가 출력된 걸 알 수 있다.
+<p align=center>
+<img width="635" alt="스크린샷 2024-01-26 16 55 06" src="https://github.com/hamsangjin/TIL/assets/103736614/649cac3a-643d-4d8a-ac9d-11fcab83e46b">
+</p>
+
+- `부모 타입으로 모두 조회하기 - Object` : `Object`의 타입을 가진 Bean(모든 스프링 Bean)들을 모두 조회한다.
+  - 결과 사진 : 모든 자바 객체의 최고 부모인 `Object` 타입으로 조회를 해, 모든 스프링 빈을 조회된 결과를 볼 수 있다.
+<p align=center>
+<img width="1476" alt="스크린샷 2024-01-26 16 54 42" src="https://github.com/hamsangjin/TIL/assets/103736614/65289c86-25a3-497f-a371-2f89d58f7cb9">
+</p>
+
+</br>
+
+---
+
+</br>
+
+## BeanFactory와 ApplicationContext
