docs : BeanFactory와 ApplicationContext part 끝

--- a/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
+++ b/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
@@ -150,7 +150,7 @@ for (String beanDefinitionName : beanDefinitionNames) {
 </br>
 
 - `모든 빈 출력하기` : 스프링에 등록된 모든 빈 정보를 출력해준다.
-  - `ac.getBeanDefinitionNames()` : 스프링에 등록된 모든 빈 이름을 조회한다.
+  - `ac.getBeanDefinitionNames()` : 스프링에 등록된 모든 빈 값이 배열 형태로 리턴된다.
   - `ac.getBean()` : 빈 이름으로 빈 객체(인스턴스)를 조회한다.
   - 결과 출력
 <p align=center>
@@ -333,7 +333,7 @@ public class ApplicationContextSameBeanFindTest {
 - `특정 타입을 모두 조회하기` : `MemberRepository` 클래스 타입을 가진 Bean들의 key값과 value값을 출력해준다.
   - `getBeansOfType(타입)` : 동일한 반환 타입을 가진 Bean을 Map 객체로 받을 수 있다.
   - `keySet()` : Map에 들어있는 모든 key값을 꺼내준다.
-  - `beansOfType.get(key)` : `Map` 안의 value 값 꺼내기
+  - `beansOfType.get(key)` : `Map` 안의 key값에 맞는 value 값 꺼내기
 
 - `static class 클래스명` : 해당 클래스 `SameBeanConfig`를 상위 클래스 `ApplicationContextSameBeanFindTest`에서만 사용하겠다.
 
@@ -454,3 +454,50 @@ public class ApplicationContextSameBeanFindTest {
 </br>
 
 ## BeanFactory와 ApplicationContext
+
+- `BeanFactory`와 `ApplicationContext`의 상속 관계
+<p align=center>
+<img width="249" alt="스크린샷 2024-01-29 13 37 24" src="https://github.com/hamsangjin/TIL/assets/103736614/99ef4b99-7900-4f08-a3d3-767e5dfcf214">
+</p>
+
+</br>
+
+### BeanFactory
+- 스프링 컨테이너의 최상위 인터페이스이며, 스프링 빈을 관리하고 조회하는 역할을 담당한다.
+- `getBean()`을 제공하며, 지금까지 우리가 사용했던 대부분의 기능은 BeanFactory가 제공하는 기능이다.
+
+</br>
+
+### ApplicationContext
+- BeanFactory 기능을 모두 상속받으며 즉, 빈을 관리하고 검색하는 기능을 BeanFactory가 제공해준다.
+
+> 그럼 `BeanFactory`와 `ApplicationContext`의 차이점은 뭘까?
+
+</br>
+
+### ApplicationContext가 제공하는 부가기능
+<p align=center>
+<img width="613" alt="스크린샷 2024-01-29 13 46 50" src="https://github.com/hamsangjin/TIL/assets/103736614/18a602e9-4548-4737-a0c5-cc6c58664342">
+</p>
+
+- `메시지소스를 활용한 국제화 기능` : 예를 들어, 한국에서 들어오면 한국어로, 영어권에서 들어오면 영어로 출력해주는 기능
+- `환경변수` : 로컬, 개발, 운영 등을 구분해서 처리한다.
+- `애플리케이션 이벤트` : 이벤트를 발행하고 구독하는 모델을 편리하게 지원해준다.
+- `편리한 리소스 조회` : 파일, 클래스패스, 외부 등에서 리소스를 편리하게 조회한다.
+
+</br>
+
+### 정리
+
+`ApplicationContext`는 `BeanFactory`의 기능을 상속받고, 거기에 편리한 부가기능까지 제공한다. </br>
+따라서 거의 `BeanFactory`를 직접 사용하지 않고, 부가기능이 포함된 `ApplicationContext`를 사용한다. </br>
+
+> `BeanFactory`나 `ApplicationContext`를 스프링 컨테이너라 한다.
+
+</br>
+
+---
+
+</br>
+
+## 다양한 설정 형식 지원 - 자바 코드 XML
