--- a/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
+++ b/Spring/Spring 핵심 원리 - 기본편/4. 스프링 컨테이너와 스프링 빈.md
@@ -501,3 +501,89 @@ public class ApplicationContextSameBeanFindTest {
 </br>
 
 ## 다양한 설정 형식 지원 - 자바 코드 XML
+
+스프링 컨테이너는 다양한 형식의 설정 정보를 받아들일 수 있게 유연하게 설계되어 있다.
+- 자바 코드, XML, Groovy 등
+
+<p align=center>
+<img width="633" alt="스크린샷 2024-01-29 14 08 15" src="https://github.com/hamsangjin/TIL/assets/103736614/080d889b-f9fa-4785-8992-54565b5d6e64">
+</p>
+
+</br>
+
+### 애노테이션 기반 자바 코드 설정 사용
+
+지금까지 했던 방법으로, `AnnotationConfigApplicationContext` 클래스를 사용하면서 자바 코드로 된 설정 정보를 넘기면 된다.
+```java
+ApplicationContexct ac = new AnnotationConfigApplicationContext(AppConfig.class);
+```
+
+</br>
+
+### XML 설정 사용
+최근에 **스프링 부트**를 많이 사용하면서 **XML** 기반의 설정은 잘 사용하지 않는다. </br>
+하지만 많은 레거시 프로젝트들이 **XML**로 되어있고, 또 **XML**을 사용하면 컴파일없이 Bean 설정 정보를 변경할 수 있는 장점도 있어 한 번 사용해보면 좋다. </br>
+`GenericXmlApplicationContext`를 사용하면서 **XML** 설정 파일을 넘기면 된다.
+
+- XmlAppConfig 사용 자바 코드
+```
+package hello.core.xml;
+
+import hello.core.member.MemberService;
+import org.junit.jupiter.api.Test;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.support.GenericXmlApplicationContext;
+
+import static org.assertj.core.api.Assertions.*;
+
+public class XmlAppContext {
+
+    @Test
+    void xmlAppContext(){
+        ApplicationContext ac = new GenericXmlApplicationContext("appConfig.xml");
+
+        MemberService memberService = ac.getBean("memberService", MemberService.class);
+
+        assertThat(memberService).isInstanceOf(MemberService.class);
+
+    }
+}
+```
+
+</br>
+
+- xml 기반의 스프링 빈 설정 정보
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+
+<beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean id="memberService" class="hello.core.member.MemberServiceImpl">
+        <constructor-arg name="memberRepository" ref="memberRepository" />
+    </bean>
+
+    <bean id="memberRepository" class="hello.core.member.MemoryMemberRepository" />
+
+    <bean id="orderService" class="hello.core.order.OrderServiceImpl">
+        <constructor-arg name="memberRepository" ref="memberRepository" />
+        <constructor-arg name="discountPolicy" ref="discountPolicy" />
+    </bean>
+
+    <bean id="discountPolicy" class="hello.core.discount.RateDiscountPolicy" />
+</beans>
+```
+
+</br>
+
+xml 기반의 `appConfig.xml` 스프링 설정 정보와 자바 코드로 된 `AppConfig.java` 설정 정보를 비교해보면 **구현체를 설정하고, 의존관계를 주입해주는 부분**을 보면 거의 비슷하다는 것을 알 수 있다. </br>
+xml 기반으로 설정하는 것은 최근에 잘 사용하지 않으므로 이정도로 마무리하고, 필요하면 [스프링 공식 레퍼런스](https://spring.io/projects/spring-framework)를 참고하자.
+
+</br>
+
+---
+
+</br>
+
+## 스프링 빈 설정 메타 정보 - BeanDefinition
