docs : 1. 자바에 대해서 정리 끝

--- a/멋쟁이 사자처럼/프리러닝/자바 입문/1. 자바에 대해서.md
+++ b/멋쟁이 사자처럼/프리러닝/자바 입문/1. 자바에 대해서.md
@@ -2,7 +2,8 @@
 
 # 목차
 - [자바란](#자바란)
-
+- [자바 개발환경 구축](#자바-개발환경-구축)
+- [자바 개발순서](#자바-개발순서)
 
 # 자바란
 
@@ -16,3 +17,61 @@
 - 플랫폼에 독립적이다.(JVM)
 - 객체지향 프로그래밍이다.
 - `Garbage Collector`로 사용되지 않는 메모리를 자동적으로 정리해준다.
+
+<br>
+
+---
+
+<br>
+
+# 자바 개발환경 구축
+
+## JDK 다운로드
+
+> `JDK` : Java Development Kit
+
+자바로 개발하기 위해서는 JDK를 설치하고 다운로드 해야하니 해보자 !
+
+다운로드 사이트는 [여기](https://www.oracle.com/technetwork/java)이고, 자기한테 맞는 운영체제를 선택해 그에 맞는 JDK를 다운받자
+
+<p align=center>
+<img width="702" alt="스크린샷 2024-03-01 13 11 19" src="https://github.com/hamsangjin/TIL/assets/103736614/b27e6015-65fb-4438-9fdf-70b65c28bb29">
+</p>
+
+그 후, JDK 설치파일을 실행시켜 `JRE`까지 같이 설치해준다.
+
+## IntelliJ 설치
+
+해당 강의가 좀 오래되어서 이클립스를 다운로드 받는 방법을 알려줬는데, <br>
+나는 요즘 많이 사용하는 `IntelliJ`를 사용할거라 생략하겠다.
+
+<br>
+
+---
+
+<br>
+
+# 자바 개발순서
+
+## 코드 작성
+먼저 간단하게 Hello Wolrd를 출력하는 `HelloWolrd.java` 파일을 만들어보자
+```java
+public class HelloWorld {
+  public static void main(String[] args) {
+    System.out.println("Hello World");
+  }
+}
+```
+
+## 코드 컴파일
+터미널을 이용해 파일이 생성된 폴더로 이동해 자바 컴파일 명령어인 `javac`를 이용해 컴파일하고, 컴파일된 클래스 파일을 실행해보자.
+
+<p align=center>
+<img width="477" alt="스크린샷 2024-03-01 13 22 07" src="https://github.com/hamsangjin/TIL/assets/103736614/90b27274-aec5-40cd-a47b-28b5b382821b">
+</p>
+
+## JVM으로 실행
+위 방식이 아닌 인텔리제이를 사용해 실행해본 결과이다.
+<p align=center>
+<img width="1512" alt="스크린샷 2024-03-01 13 25 49" src="https://github.com/hamsangjin/TIL/assets/103736614/3a960491-ba92-484c-85f3-ece4746678ed">
+</p>
