--- a/멋쟁이 사자처럼/프리러닝/자바 입문/3. 타입, 연산자.md
+++ b/멋쟁이 사자처럼/프리러닝/자바 입문/3. 타입, 연산자.md
@@ -119,7 +119,68 @@ public class OperatorExam2 {
     }
 }
 ```
+<br>
 
+## 논리 연산자
+<p align=center>
+<img width="1565" alt="스크린샷 2024-03-01 15 27 10" src="https://github.com/hamsangjin/TIL/assets/103736614/959e7e8c-d0c1-42fb-9503-173cba5522ed">
+</p>
+
+- `&&` : 논리 곱
+- `||` : 논리 합
+- `!` : 부정
+- `^` : 베타적 논리 합
+
+```java
+public class OperatorExam3 {
+    public static void main(String[] args) {
+        boolean b1 = true;
+        boolean b2 = false;
+        boolean b3 = true;
+
+        System.out.println(b1 && b2);   // false
+        System.out.println(b1 && b3);   // true
+        System.out.println(b1 || b2);   // true
+        System.out.println(b1 || b3);   // true
+        System.out.println(b2 || b2);   // false
+
+        int score = 88;
+        if(score <= 100 && score >= 70){
+            System.out.println("성공");   // 실행
+        } else{
+            System.out.println("실패");
+        }
+
+        System.out.println(b1 ^ b2);    // true
+        System.out.println(b1 ^ b3);    // false
+        System.out.println(!b1);        // false
+    }
+}
+```
+
+<br>
+
+## 삼항 연산자
+`if`문과 동일하게 사용되며, 문법이 익숙하지 않으면 그냥 `if`문을 사용하면 된다.
+> 구성 : (값 비교연산자 값) ? true : false <br>
+> 예시 : (5 > 4) ? 50 : 40
+
+```java
+public class OperatorExam4 {
+    public static void main(String[] args) {
+        int b1 = (5 < 4) ? 50 : 40;
+        System.out.println(b1); // 40
+
+        int b2 = 0;
+        if(5 < 4){
+            b2 = 50;
+        } else{
+            b2 = 40;
+        }
+        System.out.println(b2); // 40
+    }
+}
+```
 <br>
 
 ## 연산자 우선순위
@@ -130,7 +191,7 @@ public class OperatorExam2 {
 </p>
 
 ```java
-public class OperatorExam3 {
+public class OperatorExam5 {
     public static void main(String[] args) {
         int a = 5;
         int b = 10;
