docs : 제목 레벨 변경

--- a/멋쟁이 사자처럼/프리러닝/자바 입문/5. 배열.md
+++ b/멋쟁이 사자처럼/프리러닝/자바 입문/5. 배열.md
@@ -9,7 +9,7 @@
 
 > 배열은 변수가 많아져 하나하나 선언하기 힘들 때 사용한다.
 
-## 배열 선언
+# 배열 선언
 
 타입을 설정해 해당 타입의 값만 저장할 수 있으며, 초기에 설정한 크기를 변경하지 못한다.
 
@@ -37,9 +37,9 @@ public class ArrayExam {
 
 <br>
 
-## 배열 사용
+# 배열 사용
 
-### 1차원 배열
+## 1차원 배열
 ```java
 public class ArrayWithFor {
     public static void main(String[] args) {
@@ -62,7 +62,7 @@ public class ArrayWithFor {
 - for문 안에 있는 `i`는 for문이 시작이 되었을 때 생성되고 끝날 때 없어지므로 다른 for문에서도 중복으로 `i`를 사용할 수 있다.
 - 따라서 **for문 안에서만 사용하는 변수인지 아닌지를 구별**해 선언하는 것이 중요하다.
 
-### 2차원 배열
+## 2차원 배열
 
 <p align=center>
 <img width="1008" alt="스크린샷 2024-03-01 16 30 12" src="https://github.com/hamsangjin/TIL/assets/103736614/cd04129a-c724-45b3-aae6-406cef9229ba">
@@ -91,7 +91,7 @@ public class ArrayExam2 {
 
 <br>
 
-## forEach문
+# for Each문
 > - for(타입 값을 받아줄 변수명 : 출력하고 싶은 자료구조)
 > - 예시 : `for(int value : arr)`
 
