--- a/멋쟁이 사자처럼/프리러닝/자바 입문/8. 전역 변수와 static, 열거형.md
+++ b/멋쟁이 사자처럼/프리러닝/자바 입문/8. 전역 변수와 static, 열거형.md
@@ -1,10 +1,8 @@
-# 백엔드스쿨 7기: Java 프리러닝(자바 입문) - 8. 미정
+# 백엔드스쿨 7기: Java 프리러닝(자바 입문) - 8. 전역 변수와 static, 열거형
 
 # 목차
 - [변수의 scope와 static](#변수의-scope와-static)
-- [](#)
-- [](#)
-- [](#)
+- [열거형](#열거형)
 
 <br>
 
@@ -88,3 +86,49 @@ public class VariableScopeExam {
 - 이때, `globalScope`와 같은 변수는 인스턴스가 생성될 때 생성되기 때문에 `인스턴스 변수`라고 불리며, 값을 공유하지 않는다.
 - 하지만 `staticVal`와 같은 변수는 `클래스 변수`라고 하며, 객체를 생성하지 않고 직접 호출해 사용하는 것이 올바르다.
   - `클래스 변수` : static한 변수, 값을 저장할 수 있는 공간이 하나밖에 없어 값을 공유한다.
+
+<br>
+
+---
+
+<br>
+
+# 열거형
+
+> `열거형` : 특정 값만 가져다 사용해야할 때 사용하는 것
+
+- 선언 방법
+```java
+enum 이름{
+값1, 값2... 
+}
+```
+
+<br>
+
+- 실습 코드
+```java
+public class EnumExam {
+    public static final String MALE = "MALE";
+    public static final String FEMALE = "FEMALE";
+
+    public static void main(String[] args) {
+        String gender1;
+        gender1 = EnumExam.MALE;
+        gender1 = EnumExam.FEMALE;
+        gender1 = "boy";
+
+        Gender gender2;
+        gender2 = Gender.MALE;
+        gender2 = Gender.FEMALE;
+//        gender2 = "boy";
+    }
+}
+
+enum Gender{
+    MALE, FEMALE;
+}
+```
+
+- `gender1`은 String 타입으로 선언되었기 때문에 다른 문자열 값("boy" 등)도 들어갈 수 있다.
+- `gender2`는 `enum`의 `Gender` 타입으로 선언 되었기 때문에 `Gender`에 있는 값이 아니면 들어갈 수 없다.
