docs : 문서 구조 변경

--- a/JAVA/자바 입문/11. 추상 클래스, super와 부모 생성자, 오버라이딩.md
+++ b/JAVA/자바 입문/11. 추상 클래스, super와 부모 생성자, 오버라이딩.md
@@ -1,4 +1,4 @@
-# 백엔드스쿨 7기: Java 프리러닝(자바 입문) - 11. 추상 클래스, super와 부모 생성자, 오버라이딩
+# 프로그래머스 강의(자바 입문) - 11. 추상 클래스, super와 부모 생성자, 오버라이딩
 
 # 목차
 - [추상 클래스](#추상-클래스)
