--- a/JAVA/자바 입문/8. 전역 변수와 static, 열거형.md
+++ b/JAVA/자바 입문/8. 전역 변수와 static, 열거형.md
@@ -1,4 +1,4 @@
-# 백엔드스쿨 7기: Java 프리러닝(자바 입문) - 8. 전역 변수와 static, 열거형
+# 프로그래머스 강의(자바 입문) - 8. 전역 변수와 static, 열거형
 
 # 목차
 - [변수의 scope와 static](#변수의-scope와-static)
