--- a/JAVA/자바 중급/2. util 패키지, Generic, Set, List, Map.md
+++ b/JAVA/자바 중급/2. util 패키지, Generic, Set, List, Map.md
@@ -1,4 +1,4 @@
-# 백엔드스쿨 7기: Java 프리러닝(자바 중급) - 2. util 패키지, Generic, Set, List, Map
+# 프로그래머스 강의(자바 중급) - 2. util 패키지, Generic, Set, List, Map
 
 # 목차
 - [util 패키지](#util-패키지)
